Huge code refactoring: whitespace formatting mostly