@@ -62,7 +62,7 @@ public class AstConverter {
     private static List<String> taintedAttributes;
     private static String fileNameForTaintedAttributes;
 
-    /** 
+    /**
      * @function convertFile
      * Converts a given file's code into an AST which will then be converted into a GAST
      * in order for GT to analyse it and find vulnerabilities.
@@ -86,18 +86,18 @@ public class AstConverter {
             case "java" -> {
                 CommonTokenStream tokens = new CommonTokenStream(new Java8Lexer(input));
                 var tree = new Java8Parser(tokens).compilationUnit();
-                if(isUsingFramework){
-                    fef.useJavaFrameworkEntrypointsFinder(frameworkName, fileName, 
-                        path.getFileName().toString(), walker, tree);
+                if (isUsingFramework) {
+                    fef.useJavaFrameworkEntrypointsFinder(frameworkName, fileName,
+                            path.getFileName().toString(), walker, tree);
                     saveEntrypoints(path.getFileName().toString(), fef.getEntrypoints());
                     fef.cleanUp();
                 }
                 var listener = new JavaFileListener(path.getFileName().toString());
-                if(path.getFileName().toString().equals(fileNameForTaintedAttributes)){
+                if (path.getFileName().toString().equals(fileNameForTaintedAttributes)) {
                     listener.getGastBuilder().setTaintedAttributes(taintedAttributes);
                 }
-                
-                if(!analyzedClasses.isEmpty()){
+
+                if (!analyzedClasses.isEmpty()) {
                     listener.getGastBuilder().setAnalyzedClasses(analyzedClasses);
                 }
                 walker.walk(listener, tree);
@@ -108,7 +108,7 @@ public class AstConverter {
                 CommonTokenStream tokens = new CommonTokenStream(new JavaScriptLexer(input));
                 var tree = new JavaScriptParser(tokens).program();
                 var listener = new JsFileListener(path.getFileName().toString());
-                if(!analyzedClasses.isEmpty()){
+                if (!analyzedClasses.isEmpty()) {
                     listener.getGastBuilder().setAnalyzedClasses(analyzedClasses);
                 }
                 walker.walk(listener, tree);
@@ -118,19 +118,19 @@ public class AstConverter {
             case "py" -> {
                 CommonTokenStream tokens = new CommonTokenStream(new PythonLexer(input));
                 var tree = new PythonParser(tokens).root();
-                if(isUsingFramework){
-                    fef.usePythonFrameworkEntrypointsFinder(frameworkName, fileName, 
-                        path.getFileName().toString(), walker, tree);
+                if (isUsingFramework) {
+                    fef.usePythonFrameworkEntrypointsFinder(frameworkName, fileName,
+                            path.getFileName().toString(), walker, tree);
                     saveEntrypoints(path.getFileName().toString(), fef.getEntrypoints());
                     saveGlobalTaintedVariables(path.getFileName().toString(), fef.getGlobalTaintedVariables());
                     fef.cleanUp();
                 }
                 var listener = new PythonFileListener(path.getFileName().toString());
-                if(path.getFileName().toString().equals(fileNameForTaintedAttributes)){
+                if (path.getFileName().toString().equals(fileNameForTaintedAttributes)) {
                     listener.getGastBuilder().setTaintedAttributes(taintedAttributes);
                 }
 
-                if(!analyzedClasses.isEmpty()){
+                if (!analyzedClasses.isEmpty()) {
                     listener.getGastBuilder().setAnalyzedClasses(analyzedClasses);
                 }
                 walker.walk(listener, tree);
@@ -141,10 +141,10 @@ public class AstConverter {
         }
     }
 
-    /** 
+    /**
      * @function getFilesFromDirectory
      * Based on the path to the directory, as well as the extension of the files to analyse,
-     * GT will pass each file to the converter so their code can be analysed. 
+     * GT will pass each file to the converter so their code can be analysed.
      **/
     public static List<File> getFilesFromDirectory(String directoryPath, String extension) throws IOException {
         var files = new ArrayList<File>();
@@ -174,27 +174,27 @@ public class AstConverter {
         writeReport();
     }
 
-    /** 
+    /**
      * @function analyse
-     * ASTConverter's main function. Connects a given language parser (and GastBuilder) 
+     * ASTConverter's main function. Connects a given language parser (and GastBuilder)
      * with the TaintVisitor.
      **/
     public static void analyse(String directoryPath, Settings settings) throws IOException {
         report = new Report();
         StopWatch sw = new StopWatch();
         setUpAstConverter();
-        if(settings.getFramework() != null){
+        if (settings.getFramework() != null) {
             isUsingFramework = true;
             frameworkName = settings.getFramework();
             //Add the option of searching for entrypoint in a single file
-            if(settings.getSpecification().getFileName() != null){
+            if (settings.getSpecification().getFileName() != null) {
                 fileName = settings.getSpecification().getFileName();
             }
-        } else{
+        } else {
             isUsingFramework = false;
         }
 
-        if(!settings.getSpecification().getTaintedAttributes().isEmpty()){
+        if (!settings.getSpecification().getTaintedAttributes().isEmpty()) {
             taintedAttributes = new ArrayList<>(settings.getSpecification().getTaintedAttributes());
             fileNameForTaintedAttributes = settings.getSpecification().getFileName();
         }
@@ -202,17 +202,17 @@ public class AstConverter {
         sw.start();
         List<File> files = getFilesFromDirectory(directoryPath, settings.getFileExtension());
 
-        if(isUsingFramework || !settings.getSpecification().getFunctionsToAnalyze().isEmpty()){
+        if (isUsingFramework || !settings.getSpecification().getFunctionsToAnalyze().isEmpty()) {
             showEntrypoints();
             entrypointsAnalysis(settings, files);
-        } else{
+        } else {
             startTaintVisitorAnalysis(settings, files);
             report.setFileName(settings.getSpecification().getFileName());
-            if(settings.getSpecification().getFunction() != null){
+            if (settings.getSpecification().getFunction() != null) {
                 report.setAnalyzedFunctionName(settings.getSpecification().getFunction().getName());
             }
-            
-            if(!unknownMethodsLines.isEmpty() && !report.getVulnerabilities().isEmpty()){
+
+            if (!unknownMethodsLines.isEmpty() && !report.getVulnerabilities().isEmpty()) {
                 createUnknownMethodWarningMessage();
             }
         }
@@ -256,48 +256,48 @@ public class AstConverter {
         }
     }
 
-    public static void addUnknownMethodsLines(int lineNum){
-        if(!unknownMethodsLines.contains(lineNum)){
+    public static void addUnknownMethodsLines(int lineNum) {
+        if (!unknownMethodsLines.contains(lineNum)) {
             unknownMethodsLines.add(lineNum);
         }
-    } 
+    }
 
-    /** 
+    /**
      * @function saveEntrypoints
      * Saves all the entrypoints in a given file found by FrameworkEntrypointsFinder
      * for further analysis.
      **/
-    public static void saveEntrypoints(String file, HashMap<String, ArrayList<String>> entrypoints){
-        if(!entrypoints.isEmpty()){
+    public static void saveEntrypoints(String file, HashMap<String, ArrayList<String>> entrypoints) {
+        if (!entrypoints.isEmpty()) {
             filesEntrypoints.put(file, new HashMap<>(entrypoints));
         }
     }
 
-    /** 
+    /**
      * @function saveGlobalTaintedVariables
      * Same logic as saveEntrypoints but for global variables found in a given file.
      **/
-    public static void saveGlobalTaintedVariables(String file, ArrayList<String> globalTaintedVariables){
-        if(!globalTaintedVariables.isEmpty()){
+    public static void saveGlobalTaintedVariables(String file, ArrayList<String> globalTaintedVariables) {
+        if (!globalTaintedVariables.isEmpty()) {
             filesGlobalTaintedVariables.put(file, new ArrayList<>(globalTaintedVariables));
         }
     }
 
-    /** 
+    /**
      * @function entrypointsAnalysis
      * Analyses every entrypoint found in every given file or every entrypoint provided by
      * the user. After each analysis, its results are written in a report.
      **/
-    public static void entrypointsAnalysis(Settings settings, List<File> files){
-        if(isUsingFramework){
-            for(String file : filesEntrypoints.keySet()){
+    public static void entrypointsAnalysis(Settings settings, List<File> files) {
+        if (isUsingFramework) {
+            for (String file : filesEntrypoints.keySet()) {
                 HashMap<String, ArrayList<String>> entrypoints = filesEntrypoints.get(file);
-                for(String functionName : entrypoints.keySet()){
+                for (String functionName : entrypoints.keySet()) {
                     System.out.println("---------------------------------------------------------------------------");
                     System.out.println("Going to inspect function " + functionName + "  from file " + file);
                     System.out.println("---------------------------------------------------------------------------");
-                    settings.getSpecification().setFunction(new FuncDefinition(functionName, 
-                        getFunctionType(file, files, functionName, "." + settings.getFileExtension())));
+                    settings.getSpecification().setFunction(new FuncDefinition(functionName,
+                            getFunctionType(file, files, functionName, "." + settings.getFileExtension())));
                     settings.getSpecification().setTaintedVarsOrArgs(entrypoints.get(functionName));
                     settings.getSpecification().setFileName(file);
                     settings.getSpecification().setGlobalTaintVariableRegex(filesGlobalTaintedVariables.get(file));
@@ -305,9 +305,8 @@ public class AstConverter {
                     addReportEntry(file, functionName);
                 }
             }
-        }
-        else{
-            for(FuncDefinition funcDef : settings.getSpecification().getFunctionsToAnalyze()){
+        } else {
+            for (FuncDefinition funcDef : settings.getSpecification().getFunctionsToAnalyze()) {
                 System.out.println("Checking function " + funcDef.getName());
                 settings.getSpecification().setFunction(funcDef);
                 settings.getSpecification().setTaintedVarsOrArgs(funcDef.getParameters());
@@ -317,29 +316,29 @@ public class AstConverter {
         }
     }
 
-    /** 
+    /**
      * @function startTaintVisitorAnalysis
      * Auxiliary function of starting up TaintVisitor. Here to avoid code repetition.
      **/
-    public static void startTaintVisitorAnalysis(Settings settings, List<File> files){
+    public static void startTaintVisitorAnalysis(Settings settings, List<File> files) {
         TaintVisitor taintVisitor = new TaintVisitor(files, settings);
         taintVisitor.setAnalyzedClasses(analyzedClasses);
         taintVisitor.start();
     }
 
-    /** 
+    /**
      * @function addReportEntry
      * Gives a detailed entry regarding the function that was analysed: what framework
      * it is a part of, its name, if it encountered unknown methods (unreachable code),
      * vulnerabilities found (if any) and the name of the file it belongs to.
      **/
-    public static void addReportEntry(String file, String functionName){
-        if(isUsingFramework){
+    public static void addReportEntry(String file, String functionName) {
+        if (isUsingFramework) {
             report.setFrameworkMessage("This is a report on " + frameworkName + " framework analysis. Please note the processed time is on the last entry");
         }
         report.setAnalyzedFunctionName(functionName);
         report.setFileName(file);
-        if(!unknownMethodsLines.isEmpty() && !report.getVulnerabilities().isEmpty()){
+        if (!unknownMethodsLines.isEmpty() && !report.getVulnerabilities().isEmpty()) {
             createUnknownMethodWarningMessage();
             unknownMethodsLines.clear();
         }
@@ -348,22 +347,22 @@ public class AstConverter {
         report = new Report();
     }
 
-    /** 
+    /**
      * @function createUnknownMethodWarningMessage
      * Auxiliary function. Simply creates an unknown method warning message with the lines' number
      * where it found one.
      **/
-    private static void createUnknownMethodWarningMessage(){
+    private static void createUnknownMethodWarningMessage() {
         StringBuilder warning = new StringBuilder();
-        if(unknownMethodsLines.size() == 1){
-            warning.append("An unknown method/function (i.e method/function with an unreachable code block) with tainted argument(s) has been found in line ").append(unknownMethodsLines.get(0)).append(".");
+        if (unknownMethodsLines.size() == 1) {
+            warning.append("An unknown method/function (i.e method/function with an unreachable code block) with tainted argument(s) has been found in line ").append(unknownMethodsLines.getFirst()).append(".");
         } else {
             Collections.sort(unknownMethodsLines);
             warning.append("Unknown methods/functions (i.e method/function with an unreachable code block) with tainted argument(s) have been found in lines ");
-            for(int i = 0; i < unknownMethodsLines.size(); i++){
-                if(i == unknownMethodsLines.size() - 1){
+            for (int i = 0; i < unknownMethodsLines.size(); i++) {
+                if (i == unknownMethodsLines.size() - 1) {
                     warning.append(unknownMethodsLines.get(i)).append(".");
-                } else{
+                } else {
                     warning.append(unknownMethodsLines.get(i)).append(" - ");
                 }
             }
@@ -375,19 +374,19 @@ public class AstConverter {
         report.setUnknownMethodWarning(warning.toString());
     }
 
-    /** 
+    /**
      * @function getFunctionType
      * Auxiliary function. Checks if a given file exists and if that file possesses the current
      * function to analyse. If it does and that file possesses a class, then the function type will
      * be the same as the name of the file (without the extension). If not, no type is given.
      **/
-    public static String getFunctionType(String fileName, List<File> files, String functionName, String extension){
-        for(File file : files){
-            if(file.getName().matches(fileName)){
-                if(!file.getClasses().isEmpty() && 
-                file.getClasses().get(fileName.replace(extension, "")).getMethods().containsKey(functionName)){
+    public static String getFunctionType(String fileName, List<File> files, String functionName, String extension) {
+        for (File file : files) {
+            if (file.getName().matches(fileName)) {
+                if (!file.getClasses().isEmpty() &&
+                        file.getClasses().get(fileName.replace(extension, "")).getMethods().containsKey(functionName)) {
                     return fileName.replace(extension, "");
-                } else{
+                } else {
                     return null;
                 }
             }
@@ -395,32 +394,35 @@ public class AstConverter {
         return null;
     }
 
-    /** 
+    /**
      * @function showEntrypoints
      * Auxiliary function. Provides information in the terminal regarding the entrypoints
      * that were found + what file they belong to.
      **/
-    public static void showEntrypoints(){
+    public static void showEntrypoints() {
         System.out.println("================================================");
-        for(String file : filesEntrypoints.keySet()){
+        for (String file : filesEntrypoints.keySet()) {
             HashMap<String, ArrayList<String>> entrypoints = filesEntrypoints.get(file);
             System.out.println("Entrypoints found in file " + file);
-            for(String functionName : entrypoints.keySet()){
+            for (String functionName : entrypoints.keySet()) {
                 System.out.println("Function: " + functionName);
             }
             System.out.println("================================================");
         }
     }
 
-    /** 
+    /**
      * @function setUpAstConverter
      * Auxiliary function. In multiple unit tests, AstConverter's information could be reutilized
      * which is not intended. This function cleans up the AstConverter every time it is used.
      **/
-    public static void setUpAstConverter(){
+    public static void setUpAstConverter() {
         try {
             JsonNode reportFilePathNode =
-                    jsonMapper.readTree(new BufferedInputStream(new FileInputStream(ASTCONVERTER_SETTINGS_FILEPATH.toString()))).get(REPORT_FIELD_NAME);
+                    jsonMapper.readTree(
+                            new BufferedInputStream(
+                                    new FileInputStream(ASTCONVERTER_SETTINGS_FILEPATH.toString()))
+                    ).get(REPORT_FIELD_NAME);
             if (reportFilePathNode != null) {
                 reportFilePath = Paths.get(reportFilePathNode.asText());
             } else { // User provided a valid JSON with no reportFilePath field
@@ -438,8 +440,6 @@ public class AstConverter {
                 throw new RuntimeException(e2);
             }
         }
-        System.out.println(ASTCONVERTER_SETTINGS_FILEPATH.toAbsolutePath());
-        System.out.println(reportFilePath.toAbsolutePath());
         isUsingFramework = false;
         frameworkName = null;
         fileName = null;
