@@ -92,11 +92,11 @@ public class GastBuilder {
         popIfNotEmpty(codeBlocks);
     }
 
-    public void enterFinallyBlock(){
+    public void enterFinallyBlock() {
         codeBlocks.push(tryCatches.peek().getFinallyBlock());
     }
 
-    public void exitFinallyBlock(){
+    public void exitFinallyBlock() {
         popIfNotEmpty(codeBlocks);
     }
 
@@ -108,10 +108,10 @@ public class GastBuilder {
 
     public FunctionCall addFunctionCall(ParserRuleContext ctx, String name) {
         var functionCall = new FunctionCall(ctx, name);
-        if(currentLambdaFunction == null){
+        if (currentLambdaFunction == null) {
             processExpression(functionCall);
-        } else{
-            if(!addStatementsToLambdaFunc(functionCall)){
+        } else {
+            if (!addStatementsToLambdaFunc(functionCall)) {
                 processExpression(functionCall);
             }
         }
@@ -122,10 +122,10 @@ public class GastBuilder {
 
     public void addExpression(ParserRuleContext ctx) {
         Expression expression = new Expression(ctx);
-        if(currentLambdaFunction == null){
+        if (currentLambdaFunction == null) {
             processExpression(expression);
-        } else{
-            if(!addStatementsToLambdaFunc(expression)){
+        } else {
+            if (!addStatementsToLambdaFunc(expression)) {
                 processExpression(expression);
             }
         }
@@ -135,10 +135,10 @@ public class GastBuilder {
 
     public Assignment addAssignment(ParserRuleContext ctx) {
         Assignment assignment = new Assignment(ctx);
-        if(currentLambdaFunction == null){
+        if (currentLambdaFunction == null) {
             codeBlocks.peek().getStatements().add(assignment);
-        } else{
-            if(!addStatementsToLambdaFunc(assignment)){
+        } else {
+            if (!addStatementsToLambdaFunc(assignment)) {
                 codeBlocks.peek().getStatements().add(assignment);
             }
         }
@@ -149,10 +149,10 @@ public class GastBuilder {
 
     public ReturnStatement addReturnStatement(ParserRuleContext ctx) {
         ReturnStatement stmt = new ReturnStatement(ctx);
-        if(currentLambdaFunction == null){
+        if (currentLambdaFunction == null) {
             codeBlocks.peek().getStatements().add(stmt);
-        } else{
-            if(!addStatementsToLambdaFunc(stmt)){
+        } else {
+            if (!addStatementsToLambdaFunc(stmt)) {
                 codeBlocks.peek().getStatements().add(stmt);
             }
         }
@@ -165,40 +165,40 @@ public class GastBuilder {
         Variable var = new Variable(ctx, name);
         /* Update var's tracked value info in case the variable was
          * already analysed. */
-        if(currentFunction.getVariables().containsKey(var.getName())){
+        if (currentFunction.getVariables().containsKey(var.getName())) {
             var = currentFunction.getVariables().get(var.getName());
         }
         /* In case a parameter's value is overwriten (with an assignment), we will
-         * not know its type unless we retrieve it. */ 
-        else if(!currentFunction.getVariables().containsKey(var.getName()) &&
-        currentFunction.getParameters().containsKey(var.getName())){
+         * not know its type unless we retrieve it. */
+        else if (!currentFunction.getVariables().containsKey(var.getName()) &&
+                currentFunction.getParameters().containsKey(var.getName())) {
             var = currentFunction.getParameters().get(var.getName());
             isParameter = true;
         }
         /* If the variable is not in current function nor is it a parameter of it,
          * then it could be a parameter of a lambda function (declared in an interface to run it). */
-        else if(currentLambdaFunction != null && 
-        currentLambdaFunction.getParameters().containsKey(var.getName())){
+        else if (currentLambdaFunction != null &&
+                currentLambdaFunction.getParameters().containsKey(var.getName())) {
             var = currentLambdaFunction.getParameters().get(var.getName());
             isParameter = true;
         }
         /* If the variable is not in the current function (not a local variable),
          * not a parameter neither is it a parameter of a lambda function, then it could be
          * an attribute that is being used without the keyword "this". */
-        else if(!classes.isEmpty() && classes.peek().getAttributes().containsKey(var.getName())){
+        else if (!classes.isEmpty() && classes.peek().getAttributes().containsKey(var.getName())) {
             String attribute = var.getName();
             var.setName("this");
             var.setSelectedAttribute(attribute);
         }
 
-        if(!var.getName().equals("this")){
-            if(!isParameter){
+        if (!var.getName().equals("this")) {
+            if (!isParameter) {
                 currentFunction.getVariables().putIfAbsent(var.getName(), var);
-            } else{
+            } else {
                 isParameter = false;
             }
-        } else{
-            if(!currentFunction.getVariables().containsKey("this")){
+        } else {
+            if (!currentFunction.getVariables().containsKey("this")) {
                 Variable ths = new Variable("this");
                 ths.setType(classes.peek().getName());
                 currentFunction.getVariables().put("this", ths);
@@ -217,7 +217,7 @@ public class GastBuilder {
 
     public Parameter addParameter(ParserRuleContext ctx, String name) {
         Parameter param = new Parameter(ctx, name);
-        if(currentLambdaFunction == null){
+        if (currentLambdaFunction == null) {
             statements.clear();
             currentFunction.getParameters().put(param.getName(), param);
         }
@@ -242,10 +242,9 @@ public class GastBuilder {
         currentFunction = function;
         statements.clear();
         codeBlocks.push(function.getCodeBlock());
-        if (classes.empty()){
+        if (classes.empty()) {
             file.getFunctions().put(function.getName(), function);
-        }
-        else{
+        } else {
             classes.peek().getMethods().put(function.getName(), function);
             function.getThisVar().setClassReference(this.analyzedClasses.get(classes.peek().getName()));
         }
@@ -282,10 +281,10 @@ public class GastBuilder {
             ifStatements.peek().getElseIfs().add(ifStatement);
         } else {
             ifStatements.push(ifStatement);
-            if(currentLambdaFunction == null){
+            if (currentLambdaFunction == null) {
                 codeBlocks.peek().getStatements().add(ifStatement);
-            } else{
-                if(!addStatementsToLambdaFunc(ifStatement)){
+            } else {
+                if (!addStatementsToLambdaFunc(ifStatement)) {
                     codeBlocks.peek().getStatements().add(ifStatement);
                 }
             }
@@ -297,10 +296,10 @@ public class GastBuilder {
 
     public void addConditionalStatement(ParserRuleContext ctx) {
         var conditionalStatement = new ConditionalStatement(ctx);
-        if(currentLambdaFunction == null){
+        if (currentLambdaFunction == null) {
             codeBlocks.peek().getStatements().add(conditionalStatement);
-        } else{
-            if(!addStatementsToLambdaFunc(conditionalStatement)){
+        } else {
+            if (!addStatementsToLambdaFunc(conditionalStatement)) {
                 codeBlocks.peek().getStatements().add(conditionalStatement);
             }
         }
@@ -310,10 +309,10 @@ public class GastBuilder {
 
     public GenericStatement addGenericStatement(ParserRuleContext ctx) {
         var statement = new GenericStatement(ctx);
-        if(currentLambdaFunction == null){
+        if (currentLambdaFunction == null) {
             codeBlocks.peek().getStatements().add(statement);
-        } else{
-            if(!addStatementsToLambdaFunc(statement)){
+        } else {
+            if (!addStatementsToLambdaFunc(statement)) {
                 codeBlocks.peek().getStatements().add(statement);
             }
         }
@@ -370,7 +369,7 @@ public class GastBuilder {
 
     public Attribute addAttribute(ParserRuleContext ctx, String name) {
         var attribute = new Attribute(ctx, name);
-        if(this.taintedAttributes != null && this.taintedAttributes.contains(attribute.getName())){
+        if (this.taintedAttributes != null && this.taintedAttributes.contains(attribute.getName())) {
             attribute.setTainted(true);
         }
         classes.peek().getAttributes().put(attribute.getName(), attribute);
@@ -387,12 +386,12 @@ public class GastBuilder {
     /**
      * @function addLambdaFunction
      * @params ctx
-     * 
+     *
      * Creates a new Function to represent a lambda function and gives it to the
      * Expression that will store it.
      */
-    public void addLambdaFunction(ParserRuleContext ctx){
-        if(statements.peek() instanceof Expression){
+    public void addLambdaFunction(ParserRuleContext ctx) {
+        if (statements.peek() instanceof Expression) {
             Expression expression = (Expression) statements.pop();
             Function lambdaFunc = new Function();
             expression.setLambdaFunc(lambdaFunc);
@@ -404,27 +403,27 @@ public class GastBuilder {
 
     /**
      * @function exitLambdaFunction
-     * 
+     *
      * Sets the flag analyzingLambdaFunc to false as it is no longer analyzing
      * a lambda function.
      */
-    public void exitLambdaFunction(){
+    public void exitLambdaFunction() {
         currentLambdaFunction = null;
     }
 
     /**
      * @function addParametersToLambdaFunction
      * @params ctx, paramName
-     * 
+     *
      * Receives a parameter's name as well as its context in order to retrieve 
      * it from the root function and give it to the associated lambda function.
      */
-    public void addParametersToLambdaFunction(ParserRuleContext ctx, String paramName){
-        if(currentLambdaFunction != null){
+    public void addParametersToLambdaFunction(ParserRuleContext ctx, String paramName) {
+        if (currentLambdaFunction != null) {
             String type;
-            if(this.getFile().getRootFunc().getParameters().containsKey(paramName)){
+            if (this.getFile().getRootFunc().getParameters().containsKey(paramName)) {
                 type = this.getFile().getRootFunc().getParameters().get(paramName).getType();
-            } else{
+            } else {
                 type = null;
             }
             Parameter param = new Parameter(ctx, paramName, type);
@@ -432,59 +431,60 @@ public class GastBuilder {
         }
     }
 
-    /*==================================================================* 
+    /*==================================================================*
      *      New functions for value tracking (Java only for now)        *
      *==================================================================*/
+
     /**
      * @function trackClassReference
-     * 
+     *
      * Updates the expression (which will be a variable) with a reference to the
      * class it is being instantiated with (through @param className ), basically 
      * doing value tracking for class instances. Right now, it is called 
      * whenever a newExpression is used.
      */
-     public void trackClassReference(String className){
+    public void trackClassReference(String className) {
         /* NewExpression version stays because of Python, JS value tracking
          * versions being behind Java's. */
         NewExpression newExpression = null;
         /* FunctionCall represents a constructor's invocation (for class instances' creation)*/
         FunctionCall functionCall = null;
         Expression expression = null;
-        if(statements.peek() instanceof NewExpression){
+        if (statements.peek() instanceof NewExpression) {
             newExpression = (NewExpression) statements.pop();
-        } else if(statements.peek() instanceof FunctionCall){
+        } else if (statements.peek() instanceof FunctionCall) {
             functionCall = (FunctionCall) statements.pop();
             functionCall.setConstructor(true);
         }
 
-        if(statements.peek() instanceof Expression){
+        if (statements.peek() instanceof Expression) {
             expression = (Expression) statements.pop();
             Class trackedClass = new Class(className);
 
-            if(this.analyzedClasses.containsKey(className)){
+            if (this.analyzedClasses.containsKey(className)) {
                 Class originalClass = this.analyzedClasses.get(className);
                 trackedClass.setSuperClass(originalClass.getSuperClass());
                 HashMap<String, Attribute> superclassAttributes = getAllSuperclassesAttributes(
-                    originalClass.getSuperClass());
-                
+                        originalClass.getSuperClass());
+
                 //Needed so that attributes do not share same reference between different instances
                 HashMap<String, Attribute> attributes = new HashMap<>();
-                for(Attribute attribute : originalClass.getAttributes().values()){
+                for (Attribute attribute : originalClass.getAttributes().values()) {
                     Attribute newAttribute = createNewAttributeReference(attribute);
                     attributes.put(newAttribute.getName(), newAttribute);
                 }
 
-                if(superclassAttributes != null){
-                    if(this.needsFurtherSuperclassUpdate){
+                if (superclassAttributes != null) {
+                    if (this.needsFurtherSuperclassUpdate) {
                         trackedClass.setNeedSuperclassUpdate(true);
                         originalClass.setNeedSuperclassUpdate(true);
                         this.needsFurtherSuperclassUpdate = false;
                     }
 
-                    for(Attribute attribute : superclassAttributes.values()){
+                    for (Attribute attribute : superclassAttributes.values()) {
                         attributes.put(attribute.getName(), attribute);
                     }
-                } else if(trackedClass.getSuperClass() != null){
+                } else if (trackedClass.getSuperClass() != null) {
                     trackedClass.setNeedSuperclassUpdate(true);
                     originalClass.setNeedSuperclassUpdate(true);
                 }
@@ -492,85 +492,85 @@ public class GastBuilder {
                 trackedClass.setMethods(new HashMap<>(originalClass.getMethods()));
 
                 expression.setClassReference(trackedClass);
-                if(functionCall != null){
+                if (functionCall != null) {
                     functionCall.getHiddenThis().setClassReference(trackedClass);
                 }
                 expression.setType(trackedClass.getName());
-            } else{
+            } else {
                 trackedClass.setNeedSuperclassUpdate(true);
-                if(functionCall != null){
+                if (functionCall != null) {
                     functionCall.getHiddenThis().setClassReference(trackedClass);
                 }
                 expression.setClassReference(trackedClass);
                 expression.setType(trackedClass.getName());
             }
         }
-        
-        if(newExpression != null){
+
+        if (newExpression != null) {
             statements.push(newExpression);
         }
 
-        if(expression != null){
+        if (expression != null) {
             statements.push(expression);
         }
 
-        if(functionCall != null){
+        if (functionCall != null) {
             statements.push(functionCall);
         }
-     }
+    }
 
-     /**
-      * @function getAllSuperclassesAttributes
-      * @param superclassName
-      * @return HashMap<String, Attribute>
-      *
-      * Receives the name of a given superclass and returns its attributes + the ones of its
-      * superclass (and so on) if applicable.
-      */
-     public HashMap<String, Attribute> getAllSuperclassesAttributes(String superclassName){
-        if(superclassName == null || !this.analyzedClasses.containsKey(superclassName)){
+    /**
+     * @function getAllSuperclassesAttributes
+     * @param superclassName
+     * @return HashMap<String, Attribute>
+     *
+     * Receives the name of a given superclass and returns its attributes + the ones of its
+     * superclass (and so on) if applicable.
+     */
+    public HashMap<String, Attribute> getAllSuperclassesAttributes(String superclassName) {
+        if (superclassName == null || !this.analyzedClasses.containsKey(superclassName)) {
             return null;
-        } else{
+        } else {
             HashMap<String, Attribute> attributes = new HashMap<>();
             ArrayList<Class> superclasses = new ArrayList<>();
             boolean noMoreSupers = false;
-            
-            while(!noMoreSupers){
-                if(this.analyzedClasses.containsKey(superclassName)){
+
+            while (!noMoreSupers) {
+                if (this.analyzedClasses.containsKey(superclassName)) {
                     Class superclass = this.analyzedClasses.get(superclassName);
                     superclasses.add(superclass);
-                    if(superclass.getSuperClass() != null){
+                    if (superclass.getSuperClass() != null) {
                         superclassName = superclass.getSuperClass();
-                    } else{
+                    } else {
                         noMoreSupers = true;
                     }
-                } else{
+                } else {
                     this.needsFurtherSuperclassUpdate = true;
                     break;
                 }
             }
 
-            for(Class c : superclasses){
-                for(Attribute attribute : c.getAttributes().values()){
+            for (Class c : superclasses) {
+                for (Attribute attribute : c.getAttributes().values()) {
                     Attribute newAttribute = createNewAttributeReference(attribute);
                     attributes.put(newAttribute.getName(), newAttribute);
                 }
             }
             return attributes;
         }
-     }
+    }
 
-     /**
-      * @function createNewAttributeReference
-      * @param attribute
-      * @return Attribute
-      *
-      * Represents the creation of a new reference for the @param attribute.
-      * The goal here is to create a new reference for a given attribute (whenever 
-      * a new class instance is created) so that it is not the same as the one stored 
-      * in the classes field of GastBuilder.
-      */
-     public Attribute createNewAttributeReference(Attribute attribute){
+    /**
+     * @function createNewAttributeReference
+     * @param attribute
+     * @return Attribute
+     *
+     * Represents the creation of a new reference for the @param attribute.
+     * The goal here is to create a new reference for a given attribute (whenever
+     * a new class instance is created) so that it is not the same as the one stored
+     * in the classes field of GastBuilder.
+     */
+    public Attribute createNewAttributeReference(Attribute attribute) {
         Attribute newAttribute = new Attribute();
         newAttribute.setName(attribute.getName());
         newAttribute.setType(attribute.getType());
@@ -581,51 +581,49 @@ public class GastBuilder {
         newAttribute.setClassReference(attribute.getClassReference());
         newAttribute.setLambdaFunc(attribute.getLambdaFunc());
         return newAttribute;
-     }
+    }
 
     /**
      * @function trackLeftVariableValue
-     * 
+     *
      * Passes the value in the right side of an assignment to the left side,
      * if the right side exists (i.e could just be an empty variable declaration)
      * or if it has a type meaning its value could be tracked earlier (will be
      * tracked later if not). Also supports class reference and lambda function tracking.
      */
-    public void trackLeftVariableValue(){
-        if(statements.peek() instanceof Assignment){
+    public void trackLeftVariableValue() {
+        if (statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
 
-            if(assignment.getRight() != null && assignment.getRight().getType() != null && (assignment.getOperator() == null || assignment.getOperator().equals("="))){
+            if (assignment.getRight() != null && assignment.getRight().getType() != null && (assignment.getOperator() == null || assignment.getOperator().equals("="))) {
                 Variable var = (Variable) assignment.getLeft();
                 //Is the right-side a simple variable?
-                if(assignment.getRight().getTrackedValue() != null){
+                if (assignment.getRight().getTrackedValue() != null) {
                     //Check if left has class reference or not
-                    if(var.getClassReference() == null || var.getSelectedAttribute() == null){
+                    if (var.getClassReference() == null || var.getSelectedAttribute() == null) {
                         var.setTrackedValue(assignment.getRight().getTrackedValue());
                         var.setClassReference(null);
                         var.setLambdaFunc(null);
                         var.setType(assignment.getRight().getType());
                     }
-                }
-
-                else if(assignment.getRight().getClassReference() != null){
+                } else if (assignment.getRight().getClassReference() != null) {
                     /* A new class reference is assigned to the variable on the left side of the assignment. */
-                    if(assignment.getRight().getSelectedAttribute() == null && var.getSelectedAttribute() == null){
+                    if (assignment.getRight().getSelectedAttribute() == null && var.getSelectedAttribute() == null) {
                         var.setClassReference(assignment.getRight().getClassReference());
                         var.setType(assignment.getRight().getType());
                         var.setTrackedValue(null);
                         var.setLambdaFunc(null);
-                    
+
                     }
-                } else if(assignment.getRight().getLambdaFunc() != null){
+                } else if (assignment.getRight().getLambdaFunc() != null) {
                     var.setLambdaFunc(assignment.getRight().getLambdaFunc());
                     var.setClassReference(null);
                     var.setTrackedValue(null);
                 }
 
-                if(var.getTrackedValue() != null || var.getClassReference() != null 
-                    || var.getLambdaFunc() != null){
-                    if(var.getSelectedAttribute() == null){
+                if (var.getTrackedValue() != null || var.getClassReference() != null
+                        || var.getLambdaFunc() != null) {
+                    if (var.getSelectedAttribute() == null) {
                         currentFunction.getVariables().replace(var.getName(), var);
                     }
                     assignment.setLeft(var);
@@ -637,36 +635,35 @@ public class GastBuilder {
 
     /**
      * @function trackExpressionValue
-     * 
+     *
      * Updates the value of current Expression. Can only be made if the current
      * Expression does not possess a tracked value (or class reference) yet and if it only has one 
      * element (Variable, Parameter, etc), making it able to immediately get its
      * value in this stage.
-    */
-    public void trackExpressionValue(){
-        if(statements.peek() instanceof Expression){
+     */
+    public void trackExpressionValue() {
+        if (statements.peek() instanceof Expression) {
             Expression expression = (Expression) statements.pop();
             //Most likely this expression only has one element
-            if(expression.getMembers().size() == 1){
-                if(expression.getTrackedValue() == null && expression.getMembers()
-                .get(0).getClassReference() == null){
-                    expression.setTrackedValue(expression.getMembers().get(0).getTrackedValue());
-                    expression.setType(expression.getMembers().get(0).getType());
-                } 
-                else if(expression.getMembers().get(0).getClassReference() != null && 
-                        expression.getClassReference() == null){
-                    expression.setClassReference(expression.getMembers().get(0).getClassReference());
-                    if(expression.getMembers().get(0).getSelectedAttribute() != null){
-                        String attribute = expression.getMembers().get(0).getSelectedAttribute();
+            if (expression.getMembers().size() == 1) {
+                if (expression.getTrackedValue() == null && expression.getMembers()
+                        .getFirst().getClassReference() == null) {
+                    expression.setTrackedValue(expression.getMembers().getFirst().getTrackedValue());
+                    expression.setType(expression.getMembers().getFirst().getType());
+                } else if (expression.getMembers().getFirst().getClassReference() != null &&
+                        expression.getClassReference() == null) {
+                    expression.setClassReference(expression.getMembers().getFirst().getClassReference());
+                    if (expression.getMembers().getFirst().getSelectedAttribute() != null) {
+                        String attribute = expression.getMembers().getFirst().getSelectedAttribute();
                         expression.setSelectedAttribute(attribute);
                         //Avoid exception in case subclass appears before superclass
-                        if(expression.getMembers().get(0).getClassReference()
-                        .getAttributes().containsKey(attribute)){
-                            expression.setType(expression.getMembers().get(0).getClassReference()
-                        .getAttributes().get(attribute).getType());
+                        if (expression.getMembers().getFirst().getClassReference()
+                                .getAttributes().containsKey(attribute)) {
+                            expression.setType(expression.getMembers().getFirst().getClassReference()
+                                    .getAttributes().get(attribute).getType());
                         }
-                    } else{
-                        expression.setType(expression.getMembers().get(0).getType());
+                    } else {
+                        expression.setType(expression.getMembers().getFirst().getType());
                     }
                 }
             }
@@ -678,23 +675,23 @@ public class GastBuilder {
     /**
      * @function addExpressionOperator
      * @param operator (String)
-     * 
+     *
      * Gives the @param operator to the current Expression. This auxiliary 
      * function's purpose is to give the current Expression the operator related
      * to the operation it is being used: relational (<, <=, >, >=), 
      * multiplicative (*, /, %), additive (+, -), equality (==, !=) to help in
      * tracking its value in TaintVisitor.
-     */ 
-    public void addExpressionOperator(String operator){
-        if(!statements.isEmpty() && statements.peek() instanceof Expression){
+     */
+    public void addExpressionOperator(String operator) {
+        if (!statements.isEmpty() && statements.peek() instanceof Expression) {
             Expression expression = (Expression) statements.pop();
-            if(expression.getMembers().size() == 2){
+            if (expression.getMembers().size() == 2) {
                 Expression expr = new Expression();
-                expr.getMembers().add(expression.getMembers().remove(0));
-                expr.getMembers().add(expression.getMembers().remove(0));
+                expr.getMembers().add(expression.getMembers().removeFirst());
+                expr.getMembers().add(expression.getMembers().removeFirst());
                 expr.setOperator(operator);
                 expression.getMembers().add(expr);
-            } else{
+            } else {
                 expression.setOperator(operator);
             }
 
@@ -705,45 +702,45 @@ public class GastBuilder {
     /**
      * @function addAssigmentOperator
      * @param operator (String)
-     * 
+     *
      * Gives the @param operator to the current Assignment. This auxiliary 
      * function's purpose is to simplify the assignments that use the operators:
      * +=, -=, *=, /=, %=, giving it to the current Assignment. More info at
      * @function modifyAssignmentWithOperator.
      */
-    public void addAssignmentOperator(String operator){
-        if(statements.peek() instanceof Assignment){
+    public void addAssignmentOperator(String operator) {
+        if (statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
             assignment.setOperator(operator);
             statements.push(assignment);
         }
     }
 
-    /** 
+    /**
      * @function modifyAssignmentWithOperator
-     * 
+     *
      * This function modifies a given assignment if it possesses one of the
      * following operators: +=, -=, *=, /=, %=. The assignment, for example
      * y += x, is then transformed in an equivalent, for example y = y + x.
-    */
-    public void modifyAssignmentWithOperator(){
-        if(statements.peek() instanceof Assignment){
+     */
+    public void modifyAssignmentWithOperator() {
+        if (statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
-            if(assignment.getOperator() != null){
-                if(assignment.getOperator().equals("=")){
+            if (assignment.getOperator() != null) {
+                if (assignment.getOperator().equals("=")) {
                     statements.push(assignment);
                 } else {
                     Variable variable = (Variable) assignment.getLeft();
                     Expression expression;
-                    if(statements.peek() instanceof Expression){
+                    if (statements.peek() instanceof Expression) {
                         expression = assignment.getRight();
-                    } else{
+                    } else {
                         expression = new Expression();
                         expression.getMembers().add(assignment.getRight());
                     }
-                    expression.getMembers().add(0, variable);
+                    expression.getMembers().addFirst(variable);
 
-                    switch(assignment.getOperator()){
+                    switch (assignment.getOperator()) {
                         case "+=":
                             expression.setOperator("+");
                             break;
@@ -776,7 +773,7 @@ public class GastBuilder {
     /**
      * @function normalIncrementDecrementExpression
      * @params ctx (ParserRuleContext), operator (String), condType (String)
-     * 
+     *
      * This function is used to simplify & transform pre(post)-increments(decrements)
      * when they belong only to an expression (and GenericStatement). This means that they
      * are not used in an Assignment, which is covered in @function 
@@ -787,11 +784,11 @@ public class GastBuilder {
      * expression (x++), if it is an Expression then we are in the Assignment 
      * (y = x++) case.
      */
-    public void normalIncrementDecrementExpression(ParserRuleContext ctx, String operator, String condType){
+    public void normalIncrementDecrementExpression(ParserRuleContext ctx, String operator, String condType) {
         //This is the case where we have, e.g., x = ++id, so it does not belong in this function.
-        if(statements.peek() instanceof Expression){
+        if (statements.peek() instanceof Expression) {
             assignmentIncrementDecrementExpression(ctx, operator, condType);
-        } else if(statements.peek() instanceof GenericStatement){
+        } else if (statements.peek() instanceof GenericStatement) {
             Expression expression = new Expression(ctx);
             Assignment assignment = new Assignment(ctx);
             Constant constant = new Constant(ctx, "1", "int");
@@ -806,7 +803,7 @@ public class GastBuilder {
             assignment.setRight(expression);
             genStmt.setStatement(assignment);
 
-            switch(operator){
+            switch (operator) {
                 case "+":
                     expression.setOperator("+");
                     break;
@@ -825,7 +822,7 @@ public class GastBuilder {
     /**
      * @function assignmentIncrementDecrementExpression
      * @params ctx (ParserRuleContext), operator (String), condType (String)
-     * 
+     *
      * This function is used to simplify & transform pre(post)-increments(decrements)
      * when they belong to an Assignment.
      * The @param condType allows the function to identify which type of 
@@ -834,20 +831,20 @@ public class GastBuilder {
      * y = x & x = x + 1. If it has y = ++x then it is transformed to: x = x + 1
      * & y = x;
      */
-    public void assignmentIncrementDecrementExpression(ParserRuleContext ctx, String operator, String condType){ 
+    public void assignmentIncrementDecrementExpression(ParserRuleContext ctx, String operator, String condType) {
         Expression expression = new Expression(ctx);
         Assignment assignment = new Assignment(ctx);
         Constant constant = new Constant(ctx, "1", "int");
-        if(!statements.isEmpty() && statements.peek() instanceof Expression){
+        if (!statements.isEmpty() && statements.peek() instanceof Expression) {
             Expression assignExp = (Expression) statements.pop();
             Assignment assignmentStack = (Assignment) statements.pop();
             GenericStatement genStmt = (GenericStatement) statements.pop();
-            Variable variable = (Variable) assignExp.getMembers().get(0);
-            
+            Variable variable = (Variable) assignExp.getMembers().getFirst();
+
             expression.getMembers().add(variable);
             expression.getMembers().add(constant);
-            
-            switch(operator){
+
+            switch (operator) {
                 case "+":
                     expression.setOperator("+");
                     break;
@@ -860,13 +857,13 @@ public class GastBuilder {
                     return;
             }
             //x = ++id; -> id = id + 1; x = id;
-            if(condType.equals("pre")){
+            if (condType.equals("pre")) {
                 assignment.setLeft(variable);
                 assignment.setRight(expression);
                 genStmt.setStatement(assignment);
-            
-            // x = id++; -> x = id; id = id + 1;
-            } else if(condType.equals("post")){
+
+                // x = id++; -> x = id; id = id + 1;
+            } else if (condType.equals("post")) {
                 assignment.setLeft(assignmentStack.getLeft());
                 assignment.setRight(assignExp);
                 genStmt.setStatement(assignment);
@@ -883,7 +880,7 @@ public class GastBuilder {
 
     /**
      * @function accessedAttribute
-     * 
+     *
      * Represents the 3 cases where an attribute will be accessed here: 
      * 1. In the left side of an assignment, and it can be known because the last
      * statement in the statements Stack will be the Assignment object.
@@ -893,13 +890,13 @@ public class GastBuilder {
      * 3. In a pre/post-increment/decrement expression, known by the use of GenericStatement in these
      * types of statements.
      */
-    public void accessedAttribute(){
+    public void accessedAttribute() {
         List<String> members = null;
-        if(statements.isEmpty()){
+        if (statements.isEmpty()) {
             return;
         }
         //Attribute access is on the left side of assignment
-        if(statements.peek() instanceof Assignment){
+        if (statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
             Variable left = (Variable) assignment.getLeft();
             boolean isInLeft = true;
@@ -909,35 +906,35 @@ public class GastBuilder {
              * Because of this, eg, var str = x.y will go here as the right side wont have an Expression object but a
              * Variable object instead...
              */
-            if(left.getName().matches("[a-zA-Z0-9_]+\\.[a-zA-Z0-9_]+")){
+            if (left.getName().matches("[a-zA-Z0-9_]+\\.[a-zA-Z0-9_]+")) {
                 members = Arrays.asList(left.getName().split("\\."));
-            } else if(assignment.getRight() instanceof Variable right){
+            } else if (assignment.getRight() instanceof Variable right) {
                 members = Arrays.asList(right.getName().split("\\."));
                 isInLeft = false;
             }
 
-            if(members != null){
+            if (members != null) {
                 Variable var = createNewVariableForAttributes(currentFunction.getVariables().get(members.get(0)));
                 var.setSelectedAttribute(members.get(1));
-                if(isInLeft){
+                if (isInLeft) {
                     assignment.setLeft(var);
-                } else{
+                } else {
                     assignment.setRight(var);
                 }
             }
             statements.push(assignment);
-        //Attribute access is on the right side of expression
-        } else if(statements.peek() instanceof Expression){
+            //Attribute access is on the right side of expression
+        } else if (statements.peek() instanceof Expression) {
             Variable var = null, attribute;
             int newAttributeAddedIdx = -1;
             String attributeName;
             String fileNameExtension = Arrays.asList(this.file.getName().split("\\.")).get(1);
             Expression expression = (Expression) statements.pop();
 
-            if(fileNameExtension.equals("js")){
+            if (fileNameExtension.equals("js")) {
                 /* 2 here relates to the members that exist in an expression when we have an attribute access,
-                 * e.g., for someClass.someAttribute it would have Variable (someClass) and 
-                 * Variable (someAttribute). So if we have a complex expression (someClass.someAttribute + 
+                 * e.g., for someClass.someAttribute it would have Variable (someClass) and
+                 * Variable (someAttribute). So if we have a complex expression (someClass.someAttribute +
                  * anotherClass.anotherAttribute), it would have 3 members (the already parsed someClass and the
                  * to-be-parsed anotherClass).
                  */
@@ -948,7 +945,7 @@ public class GastBuilder {
                 expression.getMembers().remove(newAttributeAddedIdx + 1);
                 var = createNewVariableForAttributes((Variable) expression.getMembers().get(newAttributeAddedIdx));
                 var.setSelectedAttribute(attributeName);
-            } else if(fileNameExtension.equals("java") || fileNameExtension.equals("py")){
+            } else if (fileNameExtension.equals("java") || fileNameExtension.equals("py")) {
                 /*
                  * For more complex expressions (using +, -, +=, etc), Python/Java adds the Expression object,
                  * however, the accessed attribute is done with one object only: a Variable with source.attribute name.
@@ -957,24 +954,24 @@ public class GastBuilder {
                 Variable tempVar = (Variable) expression.getMembers().get(newAttributeAddedIdx);
                 members = Arrays.asList(tempVar.getName().split("\\."));
                 attributeName = members.get(1);
-                if(currentFunction.getVariables().containsKey(members.get(0))){
-                    var = createNewVariableForAttributes(currentFunction.getVariables().get(members.get(0)));
-                } else{
-                    var = new Variable(members.get(0));
+                if (currentFunction.getVariables().containsKey(members.get(0))) {
+                    var = createNewVariableForAttributes(currentFunction.getVariables().get(members.getFirst()));
+                } else {
+                    var = new Variable(members.getFirst());
                 }
                 var.setSelectedAttribute(attributeName);
             }
-            
-            if(newAttributeAddedIdx == 0){
+
+            if (newAttributeAddedIdx == 0) {
                 expression.getMembers().clear();
                 expression.getMembers().add(var);
-            } else{
+            } else {
                 expression.getMembers().remove(newAttributeAddedIdx);
                 expression.getMembers().add(newAttributeAddedIdx, var);
             }
 
             statements.push(expression);
-        } else if(statements.peek() instanceof GenericStatement){
+        } else if (statements.peek() instanceof GenericStatement) {
             GenericStatement genStmt = (GenericStatement) statements.pop();
             Expression expression = (Expression) genStmt.getStatement();
             Variable attribute = (Variable) expression.getMembers().get(2);
@@ -989,13 +986,13 @@ public class GastBuilder {
     /**
      * @function createNewVariableForAttributes
      * @return Variable
-     * 
+     *
      * Receives a variable and returns another reference to that variable with the same
      * information regarding name, type, if it's tainted or not, etc. Used mainly because
      * of class instances to know what attribute was used for that instance in a given statement,
      * without having that information be overwritten to all other references of that variable
      */
-    public Variable createNewVariableForAttributes(Variable variable){
+    public Variable createNewVariableForAttributes(Variable variable) {
         Variable var = new Variable(variable.getName());
         var.setClassReference(variable.getClassReference());
         var.setTrackedValue(variable.getTrackedValue());
@@ -1009,17 +1006,17 @@ public class GastBuilder {
     /**
      * @function isGenericStatement
      * @return boolean
-     * 
+     *
      * This function is used, primarily for now, for attribute accesses in Generic Statements.
      * The issue being solved here was found regarding pre/post-increment/decrement expressions with
      * attribute acesses. With a Generic Statement, the information regarding attribute accesses is lost
      * and to be able to get that information, this function will instead insert an Expression in the Stack
      * (and in the Generic Statement) to store that information so it can be processed in another function.
-     * 
+     *
      * It returns true/false based on the fact if GT has a Generic Statement in the Stack or not.
      */
-    public boolean isGenericStatement(){
-        if(!statements.isEmpty() && statements.peek() instanceof GenericStatement){
+    public boolean isGenericStatement() {
+        if (!statements.isEmpty() && statements.peek() instanceof GenericStatement) {
             GenericStatement genStmt = (GenericStatement) statements.pop();
             Expression expression = new Expression();
             genStmt.setStatement(expression);
@@ -1027,7 +1024,7 @@ public class GastBuilder {
             statements.push(genStmt);
             statements.push(expression);
             return true;
-        } else{
+        } else {
             return false;
         }
     }
@@ -1040,13 +1037,13 @@ public class GastBuilder {
      * (and avoid more if cases), a GenericStatement is created here with the necessary 
      * adjustments to make sure the code is reused.
      */
-    public void createGenStatementForIncDecExpression(ParserRuleContext ctx){
+    public void createGenStatementForIncDecExpression(ParserRuleContext ctx) {
         GenericStatement genStmt;
         Expression expression;
         addGenericStatement(ctx);
         genStmt = (GenericStatement) statements.pop();
         expression = (Expression) statements.pop();
-        if(statements.peek() instanceof Assignment){
+        if (statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
 
             statements.push(genStmt);
@@ -1054,11 +1051,11 @@ public class GastBuilder {
             statements.push(expression);
 
             int idx = this.getCodeBlocks().peek().getStatements().size();
-            genStmt = (GenericStatement) this.getCodeBlocks().peek().getStatements().remove(idx-1); 
-            assignment = (Assignment) this.getCodeBlocks().peek().getStatements().remove(idx-2);
+            genStmt = (GenericStatement) this.getCodeBlocks().peek().getStatements().remove(idx - 1);
+            assignment = (Assignment) this.getCodeBlocks().peek().getStatements().remove(idx - 2);
             this.getCodeBlocks().peek().getStatements().add(genStmt);
             this.getCodeBlocks().peek().getStatements().add(assignment);
-        } else{
+        } else {
             statements.push(expression);
             statements.push(genStmt);
         }
@@ -1071,20 +1068,20 @@ public class GastBuilder {
      * (and avoid more if cases), by switching the GenericStatement with the Expression 
      * created before it.
      */
-    public void switchGenStatementForIncDecExpression(boolean switchBack){
+    public void switchGenStatementForIncDecExpression(boolean switchBack) {
         Expression expression;
         GenericStatement genStmt;
-        if(switchBack){
+        if (switchBack) {
             genStmt = (GenericStatement) statements.pop();
             expression = (Expression) statements.pop();
 
             statements.push(genStmt);
             statements.push(expression);
 
-        } else{
+        } else {
             expression = (Expression) statements.pop();
             genStmt = (GenericStatement) statements.pop();
-            Variable variable = (Variable) expression.getMembers().get(0);
+            Variable variable = (Variable) expression.getMembers().getFirst();
             genStmt.setStatement(variable);
 
             statements.push(expression);
@@ -1099,31 +1096,31 @@ public class GastBuilder {
      * Adds a given statement to the codeblock of the current lambda function.
      * Returns true if it is dealing with a lambda function, and false otherwise.  
      */
-    public boolean addStatementsToLambdaFunc(Statement statement){
+    public boolean addStatementsToLambdaFunc(Statement statement) {
         boolean isLambdaFuncExpr = false;
         GenericStatement genStmt = null;
         /*
-         * Found this "bug" in lambda functions (works as intended in normal functions) 
-         * where if we have, e.g, str = functionCall(something), the Parser will generate 
+         * Found this "bug" in lambda functions (works as intended in normal functions)
+         * where if we have, e.g, str = functionCall(something), the Parser will generate
          * a GenericStatement and the Assignment object that follows will be lost. However,
-         * what we want to truly capture is the Assignment, so the GenericStatement is 
+         * what we want to truly capture is the Assignment, so the GenericStatement is
          * redundant in this case.
          */
-        if(statements.peek() instanceof GenericStatement){
+        if (statements.peek() instanceof GenericStatement) {
             genStmt = (GenericStatement) statements.pop();
         }
 
-        if(statements.peek() instanceof Expression){
+        if (statements.peek() instanceof Expression) {
             //This expression should contain the lambda function
             Expression expression = (Expression) statements.pop();
-            if(expression.getLambdaFunc() != null){
+            if (expression.getLambdaFunc() != null) {
                 expression.getLambdaFunc().getCodeBlock().getStatements().add(statement);
                 isLambdaFuncExpr = true;
             }
             statements.push(expression);
-        } 
+        }
 
-        if(genStmt != null){
+        if (genStmt != null) {
             statements.push(genStmt);
         }
 
@@ -1138,19 +1135,19 @@ public class GastBuilder {
      * in the constructor. So, for that, once we verify that we are indeed in the constructor we create
      * the attribute so that it can be added to its class.
      */
-    public void addAttributeToClass(ParserRuleContext ctx, String attributeName){
-        if(!this.classes.isEmpty() && !this.classes.peek().getAttributes().containsKey(attributeName)){
+    public void addAttributeToClass(ParserRuleContext ctx, String attributeName) {
+        if (!this.classes.isEmpty() && !this.classes.peek().getAttributes().containsKey(attributeName)) {
             addAttribute(ctx, attributeName);
         }
     }
 
     //Will only be used when in a constructor (JavaScript, Python)
-    public void addClassAttributeToAssignment(String attributeName){
-        if(!statements.isEmpty() && statements.peek() instanceof Assignment){
+    public void addClassAttributeToAssignment(String attributeName) {
+        if (!statements.isEmpty() && statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
             assignment.setLeft(this.classes.peek().getAttributes().get(attributeName));
             statements.push(assignment);
-        } else if(!statements.isEmpty() && statements.peek() instanceof Expression){
+        } else if (!statements.isEmpty() && statements.peek() instanceof Expression) {
             Expression expression = (Expression) statements.pop();
             addClassAttributeToAssignment(attributeName);
             statements.push(expression);
@@ -1158,29 +1155,29 @@ public class GastBuilder {
     }
 
     //Used in Assignments from PythonParser
-    public void checkIfLeftSideIsExpr(){
-        if(!statements.isEmpty() && statements.peek() instanceof Assignment){
+    public void checkIfLeftSideIsExpr() {
+        if (!statements.isEmpty() && statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
-            if(assignment.getLeft() != null && !assignment.getLeft().getMembers().isEmpty() &&
-                    assignment.getLeft().getMembers().get(0) instanceof Variable leftVar){
+            if (assignment.getLeft() != null && !assignment.getLeft().getMembers().isEmpty() &&
+                    assignment.getLeft().getMembers().getFirst() instanceof Variable leftVar) {
                 assignment.setLeft(leftVar);
             }
             statements.push(assignment);
         }
     }
 
-    /* PythonParser does not have a rule for class instance creation (no "new" expression) 
+    /* PythonParser does not have a rule for class instance creation (no "new" expression)
      * so that type of expression will lead to a function call rule. In order to know if a class
      * instance is being created, the name of the "function" is compared with the name of classes seen
      * so far to see if it is a function or a class instance.
-    */
-    public boolean nameBelongsToClass(String name){
+     */
+    public boolean nameBelongsToClass(String name) {
         return this.analyzedClasses.containsKey(name);
     }
 
-    public void collectionInitFound(){
+    public void collectionInitFound() {
         //Curently in assignment context
-        if(!statements.isEmpty() && statements.size() >= 2){
+        if (!statements.isEmpty() && statements.size() >= 2) {
             Expression expression = (Expression) statements.pop();
             Assignment assignment = (Assignment) statements.pop();
             assignment.getLeft().setCollection(true);
@@ -1195,25 +1192,25 @@ public class GastBuilder {
      * Receives the name of the attribute accessed by the "this" object and, depending on the scenario where
      * it occurred (Assignment, Expression, GenericStatement), will locate the "this" object and provide it
      * with the accessed attribute (to be used later in TaintVisitor).
-      */
-    public void addSelectedAttributeToThis(String name){
-        if(statements.peek() instanceof Assignment){
+     */
+    public void addSelectedAttributeToThis(String name) {
+        if (statements.peek() instanceof Assignment) {
             Assignment assignment = (Assignment) statements.pop();
             Variable var = createNewVariableForAttributes((Variable) assignment.getLeft());
             var.setSelectedAttribute(name);
             assignment.setLeft(var);
             statements.push(assignment);
-        } else if(statements.peek() instanceof Expression){
-            /* For now, this function will be called when JavaFileListener is in enterPrimary due to "this" 
+        } else if (statements.peek() instanceof Expression) {
+            /* For now, this function will be called when JavaFileListener is in enterPrimary due to "this"
              * variable and its attribute access. */
             Expression expression = (Expression) statements.pop();
-            Variable tempVar = (Variable) expression.getMembers().get(expression.getMembers().size() - 1);
+            Variable tempVar = (Variable) expression.getMembers().getLast();
             Variable var = createNewVariableForAttributes(tempVar);
             var.setSelectedAttribute(name);
-            expression.getMembers().remove(expression.getMembers().size() - 1);
+            expression.getMembers().removeLast();
             expression.getMembers().add(var);
             statements.push(expression);
-        } else if(statements.peek() instanceof GenericStatement){
+        } else if (statements.peek() instanceof GenericStatement) {
             /* When there is a statement: (++/-)this.someAttribute(++/--), the GenericStatement
              * will go straight to the variable "this.someAttribute" found in enterPrimary */
             GenericStatement genericStatement = (GenericStatement) statements.pop();
@@ -1234,13 +1231,13 @@ public class GastBuilder {
      * into their respective function calls for analysis, distinguishing from super() (used in constructors)
      * and "super." (used to call super of a given method).
      */
-    public void addSuperMethodCall(ParserRuleContext ctx, String functionName, boolean isConstructorSuper){
+    public void addSuperMethodCall(ParserRuleContext ctx, String functionName, boolean isConstructorSuper) {
         FunctionCall superFunction;
         addFunctionCall(ctx, functionName);
         superFunction = (FunctionCall) statements.pop();
-        if(isConstructorSuper){
+        if (isConstructorSuper) {
             superFunction.setConstructor(true);
-        } else{
+        } else {
             superFunction.setSuper(true);
         }
         statements.push(superFunction);
@@ -1252,7 +1249,7 @@ public class GastBuilder {
      * Auxiliary function. Receives the name of a given constructor so that its function is moved
      * from the analysed class's method list into its constructors list.     
      */
-    public void addConstructorToClass(String constructorName){
+    public void addConstructorToClass(String constructorName) {
         Function constructorFunc = classes.peek().getMethods().remove(constructorName);
         classes.peek().getConstructors().add(constructorFunc);
     }
@@ -1265,11 +1262,11 @@ public class GastBuilder {
      * super() or this() (used in constructors), so that the appropriate name is provided to the
      * addSuperMethodCall function.
      */
-    public void addSuperOrThisInConstructor(ParserRuleContext ctx, boolean isSuperStatement){
+    public void addSuperOrThisInConstructor(ParserRuleContext ctx, boolean isSuperStatement) {
         String functionName;
-        if(isSuperStatement){
+        if (isSuperStatement) {
             functionName = classes.peek().getSuperClass();
-        } else{
+        } else {
             functionName = classes.peek().getName();
         }
         addSuperMethodCall(ctx, functionName, true);
@@ -1283,35 +1280,35 @@ public class GastBuilder {
      * first, the method call will have as source the function it wants to call and second,
      * that same function will have as first member the class creation expression 
      * we want to have as source!
-     * 
+     *
      * (new someClass()).someMethodCall() can also appear in the right side of an assignment and
      * GT will not consider that a method call and will separate them in different statements (also
      * couldn't find a rule in Parser that allowed me to know reliably that it is a methodCall).
-     * 
+     *
      * If you want to also extend this to other languages (might be needed), care
      * for these assumptions!
      */
-    public void rearrangeMethodClassWithClassSource(){
-        if(!statements.isEmpty()){
-            if(statements.peek() instanceof FunctionCall){
+    public void rearrangeMethodClassWithClassSource() {
+        if (!statements.isEmpty()) {
+            if (statements.peek() instanceof FunctionCall) {
                 FunctionCall functionCall = (FunctionCall) statements.pop();
                 MethodCallExpression methodCall = (MethodCallExpression) statements.pop();
 
-                Expression classExpression = functionCall.getMembers().remove(0);
+                Expression classExpression = functionCall.getMembers().removeFirst();
                 methodCall.getMembers().add(functionCall);
                 methodCall.setSource(classExpression);
 
                 statements.push(methodCall);
                 statements.push(functionCall);
-            } else if(statements.peek() instanceof MethodCallExpression && statements.size() >= 2){
-                /* This part represents the appearance of (new someClass()).someMethodCall() 
+            } else if (statements.peek() instanceof MethodCallExpression && statements.size() >= 2) {
+                /* This part represents the appearance of (new someClass()).someMethodCall()
                  * in the right side of an assignment!
-                */
+                 */
                 MethodCallExpression methodCall = (MethodCallExpression) statements.pop();
                 Expression expression = (Expression) statements.pop();
-                if(!statements.isEmpty() && statements.peek() instanceof Assignment){
+                if (!statements.isEmpty() && statements.peek() instanceof Assignment) {
                     Assignment assignment = (Assignment) statements.pop();
-                    methodCall.setSource(assignment.getRight().getMembers().remove(0));
+                    methodCall.setSource(assignment.getRight().getMembers().removeFirst());
                     statements.push(assignment);
                 }
 
@@ -1330,7 +1327,7 @@ public class GastBuilder {
      * fields/attributes in case primitive data types (or Lists/Maps/Sets/Stacks) are
      * used. Doesn't support other classes due to the complexity involved!
      */
-    public void addAttributeTrackedValue(String attributeName, String type, String value){
+    public void addAttributeTrackedValue(String attributeName, String type, String value) {
         switch (type) {
             case "int", "double", "float", "char", "boolean" ->
                     this.classes.peek().getAttributes().get(attributeName).setTrackedValue(value);
@@ -1354,12 +1351,12 @@ public class GastBuilder {
         IfStatement ifStatement = (IfStatement) statements.pop();
         Expression switchExpression = (Expression) statements.pop();
 
-        if(!isElseIf){
-            ifStatement.getExpression().getMembers().add(switchExpression.getMembers().get(0));
+        if (!isElseIf) {
+            ifStatement.getExpression().getMembers().add(switchExpression.getMembers().getFirst());
             ifStatement.getExpression().setOperator("==");
-        } else{
+        } else {
             int lastElseIf = ifStatement.getElseIfs().size() - 1;
-            ifStatement.getElseIfs().get(lastElseIf).getExpression().getMembers().add(switchExpression.getMembers().get(0));
+            ifStatement.getElseIfs().get(lastElseIf).getExpression().getMembers().add(switchExpression.getMembers().getFirst());
             ifStatement.getElseIfs().get(lastElseIf).getExpression().setOperator("==");
         }
 
@@ -1375,13 +1372,13 @@ public class GastBuilder {
      * For Java context, the information will all be on the IfStatement condition's expression.
      * Assumptions are made here from testing in Java, might need some tweaks for other languages.
      */
-    public void buildConditionalExpressionAsIfStatement(){
-        if(!statements.isEmpty() && statements.peek() instanceof Expression){
+    public void buildConditionalExpressionAsIfStatement() {
+        if (!statements.isEmpty() && statements.peek() instanceof Expression) {
             Expression expression = (Expression) statements.pop();
             IfStatement ifStatement = (IfStatement) statements.pop();
-            if(statements.size() >= 3){
+            if (statements.size() >= 3) {
                 Expression unneededExpression = (Expression) statements.pop();
-                if(statements.peek() instanceof Assignment){
+                if (statements.peek() instanceof Assignment) {
                     Assignment assignment = (Assignment) statements.pop();
 
                     Assignment ifTrueAssignment = new Assignment();
@@ -1406,13 +1403,13 @@ public class GastBuilder {
         }
     }
 
-    public void createEnhancedForExpression(){
-        if(!statements.isEmpty() && statements.peek() instanceof Expression){
+    public void createEnhancedForExpression() {
+        if (!statements.isEmpty() && statements.peek() instanceof Expression) {
             Expression expression = (Expression) statements.pop();
             ConditionalStatement conditionalStatement = (ConditionalStatement) statements.pop();
 
             Assignment assignment = new Assignment();
-            assignment.setLeft(expression.getMembers().remove(0));
+            assignment.setLeft(expression.getMembers().removeFirst());
             assignment.setRight(expression);
 
             //conditionalStatement.setExpression(assignment);
