@@ -68,7 +68,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                 file = file1;
                 file1.accept(this);
             }
-        } else{
+        } else {
             file.accept(this);
         }
     }
@@ -83,7 +83,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
 
         if (spec.isRootSpecification()) {
             spec.getTaintedVarsOrArgs().forEach(var -> file.getRootFunc().getVariables().get(var).setTainted(true));
-            if(!file.getRootFunc().getParameters().isEmpty()){
+            if (!file.getRootFunc().getParameters().isEmpty()) {
                 spec.getTaintedVarsOrArgs().forEach(var -> file.getRootFunc().getParameters().get(var).setTainted(true));
             }
             return;
@@ -124,23 +124,23 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
             return;
         }
 
-        if(functionCall.isSuper()){
+        if (functionCall.isSuper()) {
             List<FileAndFunction> foundFunctions = getFunctionsForType(classes.peek().getSuperClass(), functionCall);
             //As the functionCall is a super invocation, only the superclass should have that function
-            if(foundFunctions.size() == 1){
-                processFunction(foundFunctions.get(0).getFunction(), functionCall, 
-                foundFunctions.get(0).getFile(), foundFunctions.get(0).getClazz());
+            if (foundFunctions.size() == 1) {
+                processFunction(foundFunctions.getFirst().getFunction(), functionCall,
+                        foundFunctions.getFirst().getFile(), foundFunctions.getFirst().getClazz());
             }
-        }else if(functionCall.isConstructor() && !classes.empty()){
+        } else if (functionCall.isConstructor() && !classes.empty()) {
             FileAndFunction constructorDetails = tryToGetConstructor(functionCall);
-            if(constructorDetails != null){
-                processFunction(constructorDetails.getFunction(), functionCall, 
-                constructorDetails.getFile(), constructorDetails.getClazz());
-            } else{
+            if (constructorDetails != null) {
+                processFunction(constructorDetails.getFunction(), functionCall,
+                        constructorDetails.getFile(), constructorDetails.getClazz());
+            } else {
                 /* Can happen with library/framework functions that use the "new" expression,
                  * so if the tool can't find it, this counts as unknown method/function. */
                 functionCall.setTainted(propagateTaintInExpressionList(functionCall.getMembers()));
-                if(functionCall.isTainted()){
+                if (functionCall.isTainted()) {
                     AstConverter.addUnknownMethodsLines(functionCall.getLine());
                 }
             }
@@ -159,15 +159,15 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
             }
         } else {
             //In Python, a lambda function is called by making the variable that contains it a function call
-            if(currentPathVariables.containsKey(functionCall.getFunctionName()) && 
-            currentPathVariables.get(functionCall.getFunctionName()).getLambdaFunc() != null){
+            if (currentPathVariables.containsKey(functionCall.getFunctionName()) &&
+                    currentPathVariables.get(functionCall.getFunctionName()).getLambdaFunc() != null) {
                 Variable variable = currentPathVariables.get(functionCall.getFunctionName());
                 processFunction(variable.getLambdaFunc(), functionCall, file, classes.isEmpty() ? null : classes.peek());
                 variable.getLambdaFunc().getCodeBlock().setFullyExplored(false);
-                
-            } else{
+
+            } else {
                 functionCall.setTainted(propagateTaintInExpressionList(functionCall.getMembers()));
-                if(functionCall.isTainted()){
+                if (functionCall.isTainted()) {
                     AstConverter.addUnknownMethodsLines(functionCall.getLine());
                 }
             }
@@ -181,33 +181,33 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
             function.getParameters().getElement(i).setTainted(functionCall.getMembers().get(i).isTainted());
             //Value tracking of parameters
             Expression parameter = functionCall.getMembers().get(i);
-            if(parameter.getType() != null){
-                if(parameter.getClassReference() != null){
-                    if(parameter.getSelectedAttribute() != null && 
-                    !parameter.getClassReference().getAttributes().isEmpty() &&
-                    parameter.getClassReference().getAttributes().get(parameter.getSelectedAttribute()) != null){
+            if (parameter.getType() != null) {
+                if (parameter.getClassReference() != null) {
+                    if (parameter.getSelectedAttribute() != null &&
+                            !parameter.getClassReference().getAttributes().isEmpty() &&
+                            parameter.getClassReference().getAttributes().get(parameter.getSelectedAttribute()) != null) {
                         String attributeName = parameter.getSelectedAttribute();
                         function.getParameters().getElement(i).setTrackedValue(
-                            parameter.getClassReference().getAttributes().get(attributeName).getTrackedValue());
-                        
+                                parameter.getClassReference().getAttributes().get(attributeName).getTrackedValue());
+
                         function.getParameters().getElement(i).setType(
-                            parameter.getClassReference().getAttributes().get(attributeName).getType());
-                    } else if(parameter.getSelectedAttribute() == null){
+                                parameter.getClassReference().getAttributes().get(attributeName).getType());
+                    } else if (parameter.getSelectedAttribute() == null) {
                         function.getParameters().getElement(i).setClassReference(parameter.getClassReference());
                         function.getParameters().getElement(i).setType(parameter.getType());
                     }
-                } else if(parameter.getTrackedValue() != null){
+                } else if (parameter.getTrackedValue() != null) {
                     function.getParameters().getElement(i).setTrackedValue(parameter.getTrackedValue());
                     function.getParameters().getElement(i).setType(parameter.getType());
-                } else if(parameter.isCollection()){
+                } else if (parameter.isCollection()) {
                     function.getParameters().getElement(i).setCollection(true);
-                } else if(parameter.getMembers().size() == 1 && parameter.getMembers().get(0).getLambdaFunc() != null){
-                    function.getParameters().getElement(i).setLambdaFunc(parameter.getMembers().get(0).getLambdaFunc());
-                }else{
+                } else if (parameter.getMembers().size() == 1 && parameter.getMembers().getFirst().getLambdaFunc() != null) {
+                    function.getParameters().getElement(i).setLambdaFunc(parameter.getMembers().getFirst().getLambdaFunc());
+                } else {
                     //Null parameter, clean everything
                     cleanVariable(function.getParameters().getElement(i));
                 }
-            } else{
+            } else {
                 //Null parameter, clean everything
                 cleanVariable(function.getParameters().getElement(i));
             }
@@ -219,7 +219,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         /*boolean giveTempClassReferenceForFunction = this.methodCallReferencePropagation != null 
         && this.methodCallReferencePropagation.equals(function.getName());*/
         boolean giveTempClassReferenceForFunction = !this.methodCallReferencePropagation.isEmpty()
-        && this.methodCallReferencePropagation.get(this.methodCallReferencePropagation.size() - 1).equals(function.getName());
+                && this.methodCallReferencePropagation.getLast().equals(function.getName());
         
         /*if((this.tempThis != null || this.noClassReferencePropagation) 
         && giveTempClassReferenceForFunction){
@@ -227,31 +227,31 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
             this.thisReplacements.add(this.tempThis);
             this.tempThis = null;
         }*/
-        if(((!this.tempThis.isEmpty() && this.tempThis.get(this.tempThis.size() - 1) != null) 
-        || (!this.noClassReferencePropagation.isEmpty() && 
-        this.noClassReferencePropagation.get(this.noClassReferencePropagation.size() - 1))) 
-        && giveTempClassReferenceForFunction){
-            this.currentThis = this.tempThis.remove(this.tempThis.size() - 1);
+        if (((!this.tempThis.isEmpty() && this.tempThis.getLast() != null)
+                || (!this.noClassReferencePropagation.isEmpty() &&
+                this.noClassReferencePropagation.getLast()))
+                && giveTempClassReferenceForFunction) {
+            this.currentThis = this.tempThis.removeLast();
             this.thisReplacements.add(this.currentThis);
-            this.methodCallReferencePropagation.remove(this.methodCallReferencePropagation.size() - 1);
+            this.methodCallReferencePropagation.removeLast();
         }
         //In order to propagate the currentThis (and replacements), need to set it on new TaintVisitor
         TaintVisitor taintVisitor = new TaintVisitor(files, spec, functionNames, file, clazz);
-        if(functionCall.isConstructor() && functionCall.getHiddenThis().getClassReference() != null){
-            if(functionCall.getHiddenThis().getClassReference().isNeedSuperclassUpdate()){
+        if (functionCall.isConstructor() && functionCall.getHiddenThis().getClassReference() != null) {
+            if (functionCall.getHiddenThis().getClassReference().isNeedSuperclassUpdate()) {
                 updateClassReferenceAttributes(functionCall.getHiddenThis());
             }
             taintVisitor.setCurrentThis(functionCall.getHiddenThis());
             taintVisitor.setThisReplacements(new ArrayList<>(List.of(functionCall.getHiddenThis())));
-        } else{
+        } else {
             taintVisitor.setCurrentThis(this.currentThis);
             taintVisitor.setThisReplacements(new ArrayList<>(this.thisReplacements));
-            if(giveTempClassReferenceForFunction){
+            if (giveTempClassReferenceForFunction) {
                 //taintVisitor.setNoClassReferencePropagation(this.noClassReferencePropagation);
                 //taintVisitor.setDefaultReferencePropagation(this.noClassReferencePropagation);
                 //taintVisitor.setNoClassReferencePropagation(this.noClassReferencePropagation.get(this.noClassReferencePropagation.size() - 1));
-                taintVisitor.setDefaultReferencePropagation(this.noClassReferencePropagation.get(this.noClassReferencePropagation.size() - 1));
-            } else{
+                taintVisitor.setDefaultReferencePropagation(this.noClassReferencePropagation.getLast());
+            } else {
                 //taintVisitor.setNoClassReferencePropagation(this.defaultReferencePropagation);
                 taintVisitor.setDefaultReferencePropagation(this.defaultReferencePropagation);
             }
@@ -262,17 +262,17 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
 
         trackReturnValueFromFunction(function, functionCall);
         //Latest variable replacement for "this" already used
-        if((this.currentThis != null || (!this.noClassReferencePropagation.isEmpty() &&
-        this.noClassReferencePropagation.get(this.noClassReferencePropagation.size() - 1) 
-        && giveTempClassReferenceForFunction)) 
-        && this.thisReplacements.size() > 1){
+        if ((this.currentThis != null || (!this.noClassReferencePropagation.isEmpty() &&
+                this.noClassReferencePropagation.getLast()
+                && giveTempClassReferenceForFunction))
+                && this.thisReplacements.size() > 1) {
             this.currentThis = null;
-            if(!this.noClassReferencePropagation.isEmpty()){
-                this.noClassReferencePropagation.remove(this.noClassReferencePropagation.size() - 1);
+            if (!this.noClassReferencePropagation.isEmpty()) {
+                this.noClassReferencePropagation.removeLast();
             }
-            this.thisReplacements.remove(this.thisReplacements.size() - 1);
-            if(!this.thisReplacements.isEmpty()){
-                this.currentThis = this.thisReplacements.get(this.thisReplacements.size() - 1);
+            this.thisReplacements.removeLast();
+            if (!this.thisReplacements.isEmpty()) {
+                this.currentThis = this.thisReplacements.getLast();
             }
         }
     }
@@ -298,9 +298,9 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         if (spec.getSensitiveFunctions().stream().anyMatch(func -> functionCall.getFunctionName().equals(func.getName())
                 && (sourceType == null || func.getType() == null || func.getType().equals(sourceType)))
                 && ((isTaintedSource && spec.isReturnTaintedIfTaintedSource()) || propagateTaintInExpressionList(functionCall.getMembers()))) {
-            
+
             Vulnerability vulnerability = new Vulnerability(functionCall.getLine(), functionCall.getFunctionName());
-            
+
             for (ConditionalStatement stmt : currentPath) {
                 vulnerability.getConditions().add(new VulnerabilityCondition(stmt.getLine(), stmt.getCondition()));
             }
@@ -315,31 +315,31 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
 
     @Override
     public void visit(Expression expression) {
-        if(expression.getOperator() != null){
+        if (expression.getOperator() != null) {
             expression.addValue(this);
         }
 
         expression.setTainted(propagateTaintInExpressionList(expression.getMembers()));
 
-        if(expression.getLambdaFunc() != null && this.returnStatementFound){
+        if (expression.getLambdaFunc() != null && this.returnStatementFound) {
             expression.getLambdaFunc().getCodeBlock().accept(this);
             expression.getLambdaFunc().getCodeBlock().setFullyExplored(false);
         }
 
-        if(expression.getMembers().size() == 1 && expression.getMembers().get(0).getTrackedValue() != null){
-            expression.setType(expression.getMembers().get(0).getType());
-            expression.setTrackedValue(expression.getMembers().get(0).getTrackedValue());
-        } else if(expression.getMembers().size() == 1){
+        if (expression.getMembers().size() == 1 && expression.getMembers().getFirst().getTrackedValue() != null) {
+            expression.setType(expression.getMembers().getFirst().getType());
+            expression.setTrackedValue(expression.getMembers().getFirst().getTrackedValue());
+        } else if (expression.getMembers().size() == 1) {
             //"this" variable has a few problems regarding value tracking propagation
-            expression.setType(expression.getMembers().get(0).getType());
-            if(expression.getMembers().get(0).getClassReference() != null){
-                expression.setClassReference(expression.getMembers().get(0).getClassReference());
-                expression.setSelectedAttribute(expression.getMembers().get(0).getSelectedAttribute());
-            } else if(expression.getMembers().get(0).getTrackedValue() == null && 
-                expression.getMembers().get(0).getLambdaFunc() == null && 
-                !expression.getMembers().get(0).isCollection()){
-                    //Tracking cleaning. Useful when re-using statements in analysis.
-                    expression.setTrackedValue(null);
+            expression.setType(expression.getMembers().getFirst().getType());
+            if (expression.getMembers().getFirst().getClassReference() != null) {
+                expression.setClassReference(expression.getMembers().getFirst().getClassReference());
+                expression.setSelectedAttribute(expression.getMembers().getFirst().getSelectedAttribute());
+            } else if (expression.getMembers().getFirst().getTrackedValue() == null &&
+                    expression.getMembers().getFirst().getLambdaFunc() == null &&
+                    !expression.getMembers().getFirst().isCollection()) {
+                //Tracking cleaning. Useful when re-using statements in analysis.
+                expression.setTrackedValue(null);
             }
         }
     }
@@ -357,8 +357,8 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
 
         propagateSetTainted(assignment.getLeft(), assignment.getRight().isTainted());
         assignment.setTainted(assignment.getRight().isTainted());
-        
-        if(assignment.getLeft() instanceof Variable && checkIfUntrustedDataSource((Variable)assignment.getLeft())){
+
+        if (assignment.getLeft() instanceof Variable && checkIfUntrustedDataSource((Variable) assignment.getLeft())) {
             currentPathVariables.get(((Variable) assignment.getLeft()).getName()).setTainted(true);
         }
     }
@@ -368,31 +368,31 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     public void visit(ReturnStatement stmt) {
         if (stmt.getExpression() == null)
             return;
-        this.returnStatementFound = true; 
+        this.returnStatementFound = true;
         stmt.getExpression().accept(this);
         functions.peek().getCodeBlock().setHasReturn(true);
         functions.peek().getCodeBlock().setReturnTainted(codeBlocks.peek().isReturnTainted() || stmt.getExpression().isTainted());
         codeBlocks.peek().setReturnTainted(stmt.getExpression().isTainted());
         this.possibleFunctionReturns++;
-        
-        if(stmt.getExpression().getTrackedValue() != null){
+
+        if (stmt.getExpression().getTrackedValue() != null) {
             functions.peek().getCodeBlock().setReturnTrackedValue(stmt.getExpression().getTrackedValue());
             functions.peek().getCodeBlock().setReturnType(stmt.getExpression().getType());
-        } else if(stmt.getExpression().getClassReference() != null){
+        } else if (stmt.getExpression().getClassReference() != null) {
             functions.peek().getCodeBlock().setReturnClassReference(stmt.getExpression().getClassReference());
             functions.peek().getCodeBlock().setReturnType(stmt.getExpression().getType());
-        } else{
+        } else {
             functions.peek().getCodeBlock().setReturnTrackedValue(null);
             functions.peek().getCodeBlock().setReturnClassReference(null);
             functions.peek().getCodeBlock().setReturnType(null);
         }
 
-        if((stmt.getExpression().isTainted() || 
-        (stmt.getExpression().getClassReference() != null && 
-        !stmt.getExpression().getClassReference().getAttributes().isEmpty() &&
-        stmt.getExpression().getClassReference().areAttributesTainted())) && this.firstTaintedReturnValue == null){
-            saveFirstTaintedReturnValueFound(stmt.getExpression().getTrackedValue(), 
-            stmt.getExpression().getClassReference(), stmt.getExpression().getType(), stmt.getExpression().getText());
+        if ((stmt.getExpression().isTainted() ||
+                (stmt.getExpression().getClassReference() != null &&
+                        !stmt.getExpression().getClassReference().getAttributes().isEmpty() &&
+                        stmt.getExpression().getClassReference().areAttributesTainted())) && this.firstTaintedReturnValue == null) {
+            saveFirstTaintedReturnValueFound(stmt.getExpression().getTrackedValue(),
+                    stmt.getExpression().getClassReference(), stmt.getExpression().getType(), stmt.getExpression().getText());
         }
         Util.throwAny(new ReturnFoundException("Found return statement at line " + stmt.getLine()));
     }
@@ -401,16 +401,15 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     @Override
     public void visit(Variable var) {
         if (currentPathVariables.containsKey(var.getName())) {
-            if(checkIfUntrustedDataSource(var) && var.getSelectedAttribute() == null){
+            if (checkIfUntrustedDataSource(var) && var.getSelectedAttribute() == null) {
                 currentPathVariables.get(var.getName()).setTainted(true);
                 var.setTainted(true);
-            }
-            else if(currentPathVariables.get(var.getName()).getClassReference() != null){
+            } else if (currentPathVariables.get(var.getName()).getClassReference() != null) {
                 /* "this" variable has no class reference, as opposed to class instances.
-                 * Can also have class instances (objects) that receive their reference 
+                 * Can also have class instances (objects) that receive their reference
                  * later on through a function call e.g (and not directly through a constructor)
                  */
-                if(var.getName().equals("this") || var.getClassReference() == null){
+                if (var.getName().equals("this") || var.getClassReference() == null) {
                     var.setClassReference(currentPathVariables.get(var.getName()).getClassReference());
                 }
                 /* var will almost always point to a different updated accessed attribute than the variable saved in
@@ -418,14 +417,14 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                 currentPathVariables.get(var.getName()).setSelectedAttribute(var.getSelectedAttribute());
                 /* The class reference will always have the attributes' taintedness updated but if the object
                  * (class instance) is being used then we have to update its own taintedness. */
-                if(currentPathVariables.get(var.getName()).getSelectedAttribute() == null){
-                    if(!currentPathVariables.get(var.getName()).getClassReference().getAttributes().isEmpty()){
+                if (currentPathVariables.get(var.getName()).getSelectedAttribute() == null) {
+                    if (!currentPathVariables.get(var.getName()).getClassReference().getAttributes().isEmpty()) {
                         var.setTainted(currentPathVariables.get(var.getName()).getClassReference().areAttributesTainted());
-                    } else{
+                    } else {
                         var.setTainted(currentPathVariables.get(var.getName()).isTainted());
                     }
                 }
-            } else{
+            } else {
                 var.setTainted(currentPathVariables.get(var.getName()).isTainted());
             }
             var.setType(currentPathVariables.get(var.getName()).getType());
@@ -456,50 +455,50 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
             Variable variable = functions.peek().getVariables().get(var.getName());
             Variable newVarRef = null;
             // Replacing the "this" variable with information previously gathered
-            if(variable.getName().equals("this") && currentThis != null){
+            if (variable.getName().equals("this") && currentThis != null) {
                 // "this" variable has no class reference, as opposed to class instances
                 var.setClassReference(this.currentThis.getClassReference());
                 variable.setClassReference(this.currentThis.getClassReference());
                 variable.setType(this.currentThis.getType());
                 newVarRef = createNewVariableForAttributes(variable);
-                newVarRef.setSelectedAttribute(var.getSelectedAttribute());            
+                newVarRef.setSelectedAttribute(var.getSelectedAttribute());
             }
 
             var.setType(variable.getType());
-            if(variable.getClassReference() != null){
-                if(variable.getClassReference().getAttributes().isEmpty()){
+            if (variable.getClassReference() != null) {
+                if (variable.getClassReference().getAttributes().isEmpty()) {
                     var.setTainted(variable.isTainted());
-                } else if(variable.getSelectedAttribute() != null &&
-                variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null){
+                } else if (variable.getSelectedAttribute() != null &&
+                        variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null) {
                     String attribute = variable.getSelectedAttribute();
                     var.setTainted(variable.getClassReference().getAttributes().get(attribute).isTainted());
-                } else if(newVarRef != null && newVarRef.getSelectedAttribute() != null &&
-                newVarRef.getClassReference().getAttributes().get(newVarRef.getSelectedAttribute()) != null){
+                } else if (newVarRef != null && newVarRef.getSelectedAttribute() != null &&
+                        newVarRef.getClassReference().getAttributes().get(newVarRef.getSelectedAttribute()) != null) {
                     // For the "this" variable
                     String attribute = newVarRef.getSelectedAttribute();
                     var.setTainted(newVarRef.getClassReference().getAttributes().get(attribute).isTainted());
-                } else{
+                } else {
                     var.setTainted(variable.getClassReference().areAttributesTainted());
                 }
-                /* As we are using class references and the attribute accessed can be different, 
+                /* As we are using class references and the attribute accessed can be different,
                  * this allows us to use a variable that can store that change in attributes without it
                  * affecting the variables referenced in the statements (class reference is always the same)
                  * which could introduce unwanted accesses. (Used for any other variable except "this")
-                */
-                if(newVarRef == null){
+                 */
+                if (newVarRef == null) {
                     newVarRef = createNewVariableForAttributes(variable);
                 }
                 currentPathVariables.put(var.getName(), newVarRef);
-            } else{
+            } else {
                 var.setTainted(variable.isTainted());
-                /* Variable could receive its class reference through a function call 
-                 * (and not directly through a constructor), but it is still a class instance so 
+                /* Variable could receive its class reference through a function call
+                 * (and not directly through a constructor), but it is still a class instance so
                  * needs another object in currentPathVariables to avoid unwanted behavior.
-                */
-                if(this.analyzedClasses.containsKey(var.getType())){
+                 */
+                if (this.analyzedClasses.containsKey(var.getType())) {
                     newVarRef = createNewVariableForAttributes(variable);
                     currentPathVariables.put(var.getName(), newVarRef);
-                } else{
+                } else {
                     currentPathVariables.put(var.getName(), variable);
                 }
             }
@@ -512,8 +511,8 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                 }
             }
         }
-        
-        if(!currentPathVariables.containsKey(var.getName())){
+
+        if (!currentPathVariables.containsKey(var.getName())) {
             currentPathVariables.put(var.getName(), var);
         }
     }
@@ -533,7 +532,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     @Override
     public void visit(Function function) {
         functions.push(function);
-        if(this.currentThis == null && !this.defaultReferencePropagation){
+        if (this.currentThis == null && !this.defaultReferencePropagation) {
             this.currentThis = function.getThisVar();
             this.thisReplacements.add(function.getThisVar());
         }
@@ -552,25 +551,25 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                 }
             }
         }
-        
+
         function.getCodeBlock().setFullyExplored(false);
-        if(this.thisReplacements.size() == 1){
+        if (this.thisReplacements.size() == 1) {
             this.currentThis = null;
             this.thisReplacements.clear();
         }
 
-        if(this.ifStatementFound){
+        if (this.ifStatementFound) {
             lookForIfStatementsToReset(function.getCodeBlock());
             ifStatementFound = false;
         }
 
-        if(this.firstTaintedReturnValue != null && this.possibleFunctionReturns > 1){
+        if (this.firstTaintedReturnValue != null && this.possibleFunctionReturns > 1) {
             function.getCodeBlock().setReturnTrackedValue(this.firstTaintedReturnValue.getTrackedValue());
             function.getCodeBlock().setReturnClassReference(this.firstTaintedReturnValue.getClassReference());
             function.getCodeBlock().setReturnType(this.firstTaintedReturnValue.getType());
             function.getCodeBlock().setReturnTainted(true);
         }
-        
+
         this.firstTaintedReturnValue = null;
         this.possibleFunctionReturns = 0;
         functions.pop();
@@ -584,7 +583,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         for (Statement stmt : codeBlock.getStatements()) {
             stmt.accept(this);
         }
-        if(this.returnStatementFound){
+        if (this.returnStatementFound) {
             this.returnStatementFound = false;
         }
         codeBlocks.pop();
@@ -641,28 +640,28 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         ifStatementFound = true;
         Expression ifExpr = ifStatement.getExpression();
 
-        if(ifExpr.getOperator() != null){
+        if (ifExpr.getOperator() != null) {
             ifExpr.addValue(this);
-        } else{
+        } else {
             ifExpr.accept(this);
         }
 
         if (!ifStatement.isFullyExplored()) {
-            if(ifExpr.getTrackedValue() != null && ifExpr.getType() != null &&
-            ifExpr.getType().equals("boolean")){
-                if(Boolean.parseBoolean(ifExpr.getTrackedValue())){
+            if (ifExpr.getTrackedValue() != null && ifExpr.getType() != null &&
+                    ifExpr.getType().equals("boolean")) {
+                if (Boolean.parseBoolean(ifExpr.getTrackedValue())) {
                     currentPath.add(ifStatement);
                     ifStatement.getCodeBlock().accept(this);
                     ifStatement.getCodeBlock().setFullyExplored(false);
                     currentPath.remove(ifStatement);
                     return;
                 }
-            } else if(ifExpr.getClassReference() != null && 
-            ifExpr.getSelectedAttribute() != null &&
-            !ifExpr.getClassReference().getAttributes().isEmpty() &&
-            ifExpr.getClassReference().getAttributes().get(ifExpr.getSelectedAttribute()) != null &&
-            ifExpr.getClassReference().getAttributes().get(ifExpr.getSelectedAttribute()).getType().equals("boolean")){
-                if(Boolean.parseBoolean(ifExpr.getClassReference().getAttributes().get(ifExpr.getSelectedAttribute()).getTrackedValue())){
+            } else if (ifExpr.getClassReference() != null &&
+                    ifExpr.getSelectedAttribute() != null &&
+                    !ifExpr.getClassReference().getAttributes().isEmpty() &&
+                    ifExpr.getClassReference().getAttributes().get(ifExpr.getSelectedAttribute()) != null &&
+                    ifExpr.getClassReference().getAttributes().get(ifExpr.getSelectedAttribute()).getType().equals("boolean")) {
+                if (Boolean.parseBoolean(ifExpr.getClassReference().getAttributes().get(ifExpr.getSelectedAttribute()).getTrackedValue())) {
                     currentPath.add(ifStatement);
                     ifStatement.getCodeBlock().accept(this);
                     ifStatement.getCodeBlock().setFullyExplored(false);
@@ -681,36 +680,36 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         /* Check all else if statements until a condition is evaluated to true.
          * Will still have some impossible paths in more complex and difficult to
          * analyse conditions. */
-        if(ifStatement.getElseIfs() != null && !ifStatement.getElseIfs().isEmpty()){
-            for(IfStatement elseIf : ifStatement.getElseIfs()){
-                if(!elseIf.isFullyExplored()){
-                    if(elseIf.getExpression().getOperator() != null){
+        if (ifStatement.getElseIfs() != null && !ifStatement.getElseIfs().isEmpty()) {
+            for (IfStatement elseIf : ifStatement.getElseIfs()) {
+                if (!elseIf.isFullyExplored()) {
+                    if (elseIf.getExpression().getOperator() != null) {
                         elseIf.getExpression().addValue(this);
-                    } else{
+                    } else {
                         elseIf.getExpression().accept(this);
                     }
 
-                    if(elseIf.getExpression().getTrackedValue() != null && 
-                    elseIf.getExpression().getType() != null &&
-                    elseIf.getExpression().getType().equals("boolean")){
+                    if (elseIf.getExpression().getTrackedValue() != null &&
+                            elseIf.getExpression().getType() != null &&
+                            elseIf.getExpression().getType().equals("boolean")) {
                         //Found an else if with a true condition
-                        if(Boolean.parseBoolean(elseIf.getExpression().getTrackedValue())){
-                            elseIf.accept(this);
-                            return;
-                        } 
-                    } else if(elseIf.getExpression().getClassReference() != null && 
-                    elseIf.getExpression().getSelectedAttribute() != null &&
-                    !elseIf.getExpression().getClassReference().getAttributes().isEmpty() &&
-                    elseIf.getExpression().getClassReference().getAttributes().get(elseIf.getExpression().getSelectedAttribute()) != null &&
-                    elseIf.getExpression().getClassReference().getAttributes()
-                    .get(elseIf.getExpression().getSelectedAttribute()).getType().equals("boolean")){
-                        
-                        if(Boolean.parseBoolean(elseIf.getExpression().getClassReference().getAttributes()
-                        .get(elseIf.getExpression().getSelectedAttribute()).getTrackedValue())){
+                        if (Boolean.parseBoolean(elseIf.getExpression().getTrackedValue())) {
                             elseIf.accept(this);
                             return;
                         }
-                    } else{
+                    } else if (elseIf.getExpression().getClassReference() != null &&
+                            elseIf.getExpression().getSelectedAttribute() != null &&
+                            !elseIf.getExpression().getClassReference().getAttributes().isEmpty() &&
+                            elseIf.getExpression().getClassReference().getAttributes().get(elseIf.getExpression().getSelectedAttribute()) != null &&
+                            elseIf.getExpression().getClassReference().getAttributes()
+                                    .get(elseIf.getExpression().getSelectedAttribute()).getType().equals("boolean")) {
+
+                        if (Boolean.parseBoolean(elseIf.getExpression().getClassReference().getAttributes()
+                                .get(elseIf.getExpression().getSelectedAttribute()).getTrackedValue())) {
+                            elseIf.accept(this);
+                            return;
+                        }
+                    } else {
                         elseIf.accept(this);
                         return;
                     }
@@ -719,7 +718,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         }
 
         if (ifStatement.getElseBlock() != null && !ifStatement.getElseBlock().isFullyExplored()
-        && !ifStatement.getElseBlock().getStatements().isEmpty()) {
+                && !ifStatement.getElseBlock().getStatements().isEmpty()) {
             ifStatement.getElseBlock().accept(this);
             ifStatement.getElseBlock().setFullyExplored(false);
         }
@@ -761,29 +760,29 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
             var source = currentPathVariables.get(((Variable) methodCall.getSource()).getName());
             String sourceType;
             boolean sourceTaint;
-            if(source.getClassReference() != null && source.getSelectedAttribute() != null &&
-            !source.getClassReference().getAttributes().isEmpty() && 
-            source.getClassReference().getAttributes().get(source.getSelectedAttribute()) != null){
+            if (source.getClassReference() != null && source.getSelectedAttribute() != null &&
+                    !source.getClassReference().getAttributes().isEmpty() &&
+                    source.getClassReference().getAttributes().get(source.getSelectedAttribute()) != null) {
                 String attributeName = source.getSelectedAttribute();
                 sourceType = source.getClassReference().getAttributes().get(attributeName).getType();
                 sourceTaint = source.getClassReference().getAttributes().get(attributeName).isTainted();
-            } else{
+            } else {
                 sourceType = source.getType() != null ? source.getType() : source.getName();
-                if(source.getClassReference() != null && 
-                !source.getClassReference().getAttributes().isEmpty()){
+                if (source.getClassReference() != null &&
+                        !source.getClassReference().getAttributes().isEmpty()) {
                     sourceTaint = source.getClassReference().areAttributesTainted();
-                } else{
+                } else {
                     sourceTaint = source.isTainted();
                 }
             }
             isTainted = processMethodCall(methodCall, sourceType, sourceTaint);
             source.setTainted(isTainted);
-        }  else if(methodCall.getSource() instanceof FunctionCall source){
+        } else if (methodCall.getSource() instanceof FunctionCall source) {
             source.accept(this);
             isTainted = processMethodCall(methodCall, source.getType(), source.isTainted());
-        } else if(methodCall.getSource() != null){
+        } else if (methodCall.getSource() != null) {
             isTainted = processMethodCall(methodCall, methodCall.getSource().getType(),
-                        methodCall.getSource().isTainted());
+                    methodCall.getSource().isTainted());
         }
         methodCall.setTainted(isTainted);
         methodCall.getSource().setTainted(isTainted || methodCall.getSource().isTainted());
@@ -799,8 +798,8 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         for (Expression member : methodCall.getMembers()) {
             if (member instanceof FunctionCall funcCall) {
                 if (methodCall.getCurrentType() == null) {
-                    System.out.println("Source type is unknown so function call " + funcCall.getFunctionName() + 
-                    " will be treated as a simple function " + " file: " + file.getName());
+                    System.out.println("Source type is unknown so function call " + funcCall.getFunctionName() +
+                            " will be treated as a simple function " + " file: " + file.getName());
                     methodCall.setCurrentType(funcCall.getReturnType());
                     funcCall.accept(this);
                     isTainted = isTainted || funcCall.isTainted() || (isTaintedSource && spec.isReturnTaintedIfTaintedSource());
@@ -808,31 +807,31 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                     if (isCallToSanitizationFunction(funcCall, isTaintedSource, methodCall.getCurrentType())) {
                         continue;
                     }
-                    
-                    if(methodCall.getSource() instanceof Variable variable){
-                        if(variable.getLambdaFunc() != null){
+
+                    if (methodCall.getSource() instanceof Variable variable) {
+                        if (variable.getLambdaFunc() != null) {
                             processFunction(variable.getLambdaFunc(), funcCall, file, classes.isEmpty() ? null : classes.peek());
                             isTainted = isTainted || funcCall.isTainted() || (isTaintedSource && spec.isReturnTaintedIfTaintedSource());
                             gotLambdaFunc = true;
                             variable.getLambdaFunc().getCodeBlock().setFullyExplored(false);
-                        } else if(variable.isCollection()){
+                        } else if (variable.isCollection()) {
                             gotCollection = true;
-                            if(!isTaintedSource && (funcCall.getFunctionName().equals("add") || 
-                            funcCall.getFunctionName().equals("put") || 
-                            funcCall.getFunctionName().equals("push"))){
+                            if (!isTaintedSource && (funcCall.getFunctionName().equals("add") ||
+                                    funcCall.getFunctionName().equals("put") ||
+                                    funcCall.getFunctionName().equals("push"))) {
                                 isTainted = propagateTaintInExpressionList(methodCall.getMembers());
                                 variable.setTainted(isTainted);
-                            } else{
+                            } else {
                                 //Independently of the method invoked, if collection is tainted, it will return tainted
                                 isTainted = isTaintedSource;
                             }
-                        } else{
+                        } else {
                             checkedClassReferenceForPropagation = true;
                             canPropagateClassReferenceToFunction(variable, funcCall.getFunctionName(), methodCall);
                         }
                     }
 
-                    if(!gotLambdaFunc && !gotCollection){
+                    if (!gotLambdaFunc && !gotCollection) {
                         List<FileAndFunction> functions = getFunctionsForType(methodCall.getCurrentType(), funcCall);
                         if (functions.isEmpty()) {
                             System.out.println("Could not find any function for type " + methodCall.getCurrentType() + " and function: " + funcCall.getFunctionName() + " file: " + file.getName());
@@ -841,10 +840,10 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                              */
                             funcCall.setType(methodCall.getCurrentType());
                             funcCall.accept(this);
-                            if(checkedClassReferenceForPropagation){
-                                this.tempThis.remove(this.tempThis.size() - 1);
-                                this.noClassReferencePropagation.remove(this.noClassReferencePropagation.size() - 1);
-                                this.methodCallReferencePropagation.remove(this.methodCallReferencePropagation.size() - 1);
+                            if (checkedClassReferenceForPropagation) {
+                                this.tempThis.removeLast();
+                                this.noClassReferencePropagation.removeLast();
+                                this.methodCallReferencePropagation.removeLast();
                             }
                             methodCall.setCurrentType(funcCall.getReturnType());
                             isTainted = isTainted || funcCall.isTainted() || (isTaintedSource && spec.isReturnTaintedIfTaintedSource());
@@ -874,7 +873,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
 
     private List<FileAndFunction> getFunctionsForType(String type, FunctionCall funcCall) {
         var classesForType = files.stream().filter(iterFile -> iterFile.getClasses().containsKey(type))
-                .map(iterFile -> new FileAndClass(iterFile, iterFile.getClasses().get(type))).collect(Collectors.toList());
+                .map(iterFile -> new FileAndClass(iterFile, iterFile.getClasses().get(type))).toList();
 
         if (classesForType.size() > 1) {
             System.out.println("Found more than one class for type " + type);
@@ -929,15 +928,15 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         boolean taint = false;
         for (Expression expr : expressions) {
             expr.accept(this);
-            if(expr.getClassReference() != null && expr.getSelectedAttribute() != null &&
-            !expr.getClassReference().getAttributes().isEmpty()){
+            if (expr.getClassReference() != null && expr.getSelectedAttribute() != null &&
+                    !expr.getClassReference().getAttributes().isEmpty()) {
                 String attribute = expr.getSelectedAttribute();
-                if(expr.getClassReference().getAttributes().get(attribute) != null){
+                if (expr.getClassReference().getAttributes().get(attribute) != null) {
                     taint = taint || expr.getClassReference().getAttributes().get(attribute).isTainted();
-                } else{
+                } else {
                     taint = taint || expr.getClassReference().areAttributesTainted();
                 }
-            } else{
+            } else {
                 taint = taint || expr.isTainted();
             }
         }
@@ -948,19 +947,19 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     private void propagateSetTainted(Expression expression, boolean taint) {
         expression.setTainted(taint);
         if (expression instanceof Variable variable) {
-            if(variable.getClassReference() != null){
-                if(variable.getClassReference().getAttributes().isEmpty()){
+            if (variable.getClassReference() != null) {
+                if (variable.getClassReference().getAttributes().isEmpty()) {
                     currentPathVariables.get(variable.getName()).setTainted(variable.isTainted());
-                } else if(variable.getSelectedAttribute() != null && 
-                variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null){
+                } else if (variable.getSelectedAttribute() != null &&
+                        variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null) {
                     String attributeName = variable.getSelectedAttribute();
                     currentPathVariables.get(variable.getName()).getClassReference().getAttributes()
-                    .get(attributeName).setTainted(variable.isTainted());
-                } else{
+                            .get(attributeName).setTainted(variable.isTainted());
+                } else {
                     currentPathVariables.get(variable.getName()).setTainted(
-                        variable.getClassReference().areAttributesTainted());
+                            variable.getClassReference().areAttributesTainted());
                 }
-            } else{
+            } else {
                 currentPathVariables.get(variable.getName()).setTainted(variable.isTainted());
             }
         }
@@ -969,119 +968,113 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         }
     }
 
-    /*==================================================================* 
+    /*==================================================================*
      *              New functions for value tracking                    *
      *==================================================================*/
-    
-     /**
-      * @function track(Assignment)
-      * @param assignment
-      * This function is used for value tracking of the left side of the 
-      * assignment, be it a primitive type, a class reference (more complex) or 
-      * a lambda function reference. More comments along it that explain some of
-      * the logic.
-      */
-     @Override
-    public void track(Assignment assignment){
+
+    /**
+     * @param assignment This function is used for value tracking of the left side of the
+     *                   assignment, be it a primitive type, a class reference (more complex) or
+     *                   a lambda function reference. More comments along it that explain some of
+     *                   the logic.
+     * @function track(Assignment)
+     */
+    @Override
+    public void track(Assignment assignment) {
         //Rare cases can appear when dealing with more complex (Python) code. 
-        if(!(assignment.getLeft() instanceof Variable)){
+        if (!(assignment.getLeft() instanceof Variable)) {
             return;
         }
 
-        if(assignment.getRight() != null){
+        if (assignment.getRight() != null) {
             Expression expression = assignment.getRight();
             Variable variable = (Variable) assignment.getLeft();
 
-            if(expression.getTrackedValue() != null){
-                if(variable.getClassReference() == null || variable.getSelectedAttribute() == null){
+            if (expression.getTrackedValue() != null) {
+                if (variable.getClassReference() == null || variable.getSelectedAttribute() == null) {
                     variable.setTrackedValue(expression.getTrackedValue());
                     variable.setClassReference(null);
                     variable.setLambdaFunc(null);
                     variable.setType(expression.getType());
-                } else if(!variable.getClassReference().getAttributes().isEmpty() &&
-                variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null){
+                } else if (!variable.getClassReference().getAttributes().isEmpty() &&
+                        variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null) {
                     String leftAttribute = assignment.getLeft().getSelectedAttribute();
                     variable.getClassReference().getAttributes().get(leftAttribute)
-                    .setTrackedValue(expression.getTrackedValue());
+                            .setTrackedValue(expression.getTrackedValue());
                     variable.getClassReference().getAttributes().get(leftAttribute)
-                    .setType(expression.getType());
+                            .setType(expression.getType());
                 }
-            }
-            
-            else if(expression.getClassReference() != null){
-                /*Same as in GastBuilder's @function trackLeftVariableValue. 
-                 * Have to watch out for the following cases: left-side is a simple variable so it becomes 
-                 * a class instance if right-side does not access any attribute OR 
-                 * left-side still is a simple variable but right-side accesses an attribute OR 
-                 * left-side accesses an attribute but right-side doesnt so that attribute is a class instance OR 
+            } else if (expression.getClassReference() != null) {
+                /*Same as in GastBuilder's @function trackLeftVariableValue.
+                 * Have to watch out for the following cases: left-side is a simple variable so it becomes
+                 * a class instance if right-side does not access any attribute OR
+                 * left-side still is a simple variable but right-side accesses an attribute OR
+                 * left-side accesses an attribute but right-side doesnt so that attribute is a class instance OR
                  * left-side & right-side both access an attribute
                  */
-                if(expression.getSelectedAttribute() == null){
-                    if(variable.getClassReference() != null && 
-                    variable.getSelectedAttribute() != null && 
-                    !variable.getClassReference().getAttributes().isEmpty() &&
-                    variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null){
+                if (expression.getSelectedAttribute() == null) {
+                    if (variable.getClassReference() != null &&
+                            variable.getSelectedAttribute() != null &&
+                            !variable.getClassReference().getAttributes().isEmpty() &&
+                            variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null) {
                         String leftAttribute = variable.getSelectedAttribute();
                         variable.getClassReference().getAttributes().get(leftAttribute)
-                        .setClassReference(expression.getClassReference());
-                        
+                                .setClassReference(expression.getClassReference());
+
                         variable.getClassReference().getAttributes().get(leftAttribute)
-                        .setType(expression.getType());
-                    }
-                    else{
+                                .setType(expression.getType());
+                    } else {
                         variable.setClassReference(expression.getClassReference());
                         variable.setType(expression.getType());
                         variable.setTrackedValue(null);
                         variable.setLambdaFunc(null);
                     }
-                }
-                else if(!expression.getClassReference().getAttributes().isEmpty() &&
-                expression.getClassReference().getAttributes().get(expression.getSelectedAttribute()) != null){
-                    if(variable.getClassReference() != null && 
-                    variable.getSelectedAttribute() != null &&
-                    !variable.getClassReference().getAttributes().isEmpty() &&
-                    variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null){
+                } else if (!expression.getClassReference().getAttributes().isEmpty() &&
+                        expression.getClassReference().getAttributes().get(expression.getSelectedAttribute()) != null) {
+                    if (variable.getClassReference() != null &&
+                            variable.getSelectedAttribute() != null &&
+                            !variable.getClassReference().getAttributes().isEmpty() &&
+                            variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null) {
                         String leftAttribute = variable.getSelectedAttribute();
                         String rightAttribute = expression.getSelectedAttribute();
                         variable.getClassReference().getAttributes().get(leftAttribute)
-                        .setTrackedValue(expression.getClassReference()
-                        .getAttributes().get(rightAttribute).getTrackedValue());
-                        
+                                .setTrackedValue(expression.getClassReference()
+                                        .getAttributes().get(rightAttribute).getTrackedValue());
+
                         variable.getClassReference().getAttributes().get(leftAttribute)
-                        .setType(expression.getClassReference()
-                        .getAttributes().get(rightAttribute).getType());
-                    } 
-                    else{
+                                .setType(expression.getClassReference()
+                                        .getAttributes().get(rightAttribute).getType());
+                    } else {
                         String rightAttribute = expression.getSelectedAttribute();
 
                         variable.setTrackedValue(expression.getClassReference()
-                        .getAttributes().get(rightAttribute).getTrackedValue());
+                                .getAttributes().get(rightAttribute).getTrackedValue());
 
                         variable.setType(expression.getClassReference()
-                        .getAttributes().get(rightAttribute).getType());
+                                .getAttributes().get(rightAttribute).getType());
                         variable.setClassReference(null);
                         variable.setLambdaFunc(null);
                     }
                 }
-            } else if(expression.getLambdaFunc() != null){
+            } else if (expression.getLambdaFunc() != null) {
                 variable.setLambdaFunc(expression.getLambdaFunc());
                 variable.setClassReference(null);
                 variable.setTrackedValue(null);
-            } else{
-                if(variable.getClassReference() != null){
-                    if(variable.getSelectedAttribute() != null &&
-                    !variable.getClassReference().getAttributes().isEmpty() &&
-                    variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null){
+            } else {
+                if (variable.getClassReference() != null) {
+                    if (variable.getSelectedAttribute() != null &&
+                            !variable.getClassReference().getAttributes().isEmpty() &&
+                            variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null) {
                         String attribute = variable.getSelectedAttribute();
                         variable.getClassReference().getAttributes().get(attribute).setTrackedValue(null);
                         variable.getClassReference().getAttributes().get(attribute).setClassReference(null);
                         variable.getClassReference().getAttributes().get(attribute).setLambdaFunc(null);
                         variable.getClassReference().getAttributes().get(attribute).setType(null);
-                    } else{
+                    } else {
                         variable.setClassReference(null);
                     }
 
-                } else{
+                } else {
                     variable.setTrackedValue(null);
                     variable.setLambdaFunc(null);
                 }
@@ -1089,13 +1082,13 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
 
             assignment.setLeft(variable);
 
-            if(currentPathVariables.containsKey(variable.getName())){
-                if(currentPathVariables.get(variable.getName()).getClassReference() == null &&
-                variable.getClassReference() == null){
+            if (currentPathVariables.containsKey(variable.getName())) {
+                if (currentPathVariables.get(variable.getName()).getClassReference() == null &&
+                        variable.getClassReference() == null) {
                     currentPathVariables.replace(variable.getName(), variable);
-                } else if(variable.getClassReference() != null){
-                    /* If class reference is the same, there is no problem. 
-                     * But if class reference changes to another class (eg subclass to superclass), 
+                } else if (variable.getClassReference() != null) {
+                    /* If class reference is the same, there is no problem.
+                     * But if class reference changes to another class (eg subclass to superclass),
                      * then it needs to change in currentPathVariables to reflect! */
                     currentPathVariables.get(variable.getName()).setClassReference(variable.getClassReference());
                     currentPathVariables.get(variable.getName()).setType(variable.getType());
@@ -1107,26 +1100,24 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     }
 
     /**
+     * @param expression Represents the logic for complex expressions between numbers and strings, ie,
+     *                   additive, multiplicative, equality, relational expressions. Various distinctions
+     *                   had to be made to assure the values are correct and legal. This function is invoked
+     *                   if a given expression possesses an operator (+, -, *, /, %, ==, !=, <, <=, >, >=).
      * @function track(Expression)
-     * @param expression
-     * 
-     * Represents the logic for complex expressions between numbers and strings, ie,
-     * additive, multiplicative, equality, relational expressions. Various distinctions
-     * had to be made to assure the values are correct and legal. This function is invoked
-     * if a given expression possesses an operator (+, -, *, /, %, ==, !=, <, <=, >, >=).
      */
     @Override
-    public void track(Expression expression){
+    public void track(Expression expression) {
         Object result;
         double value = 0.0, anotherValue = 0.0;
         double epsilon = 0.000001d;
-        
+
         //Check if its members also possess operators (should probably do an accept as well to update?)
-        for(Expression expr : expression.getMembers()){
-            if(expr.getOperator() != null){
+        for (Expression expr : expression.getMembers()) {
+            if (expr.getOperator() != null) {
                 expr.addValue(this);
-            } else if(expr.getTrackedValue() == null && expr.getClassReference() == null){
-                /* Mostly to give "this" (could happen to other variables) its info back because, 
+            } else if (expr.getTrackedValue() == null && expr.getClassReference() == null) {
+                /* Mostly to give "this" (could happen to other variables) its info back because,
                  * when used in an Expression (for example, right-side of Assignment) it doesn't retrieve its values */
                 expr.accept(this);
             }
@@ -1134,44 +1125,44 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
 
         Expression expr1 = expression.getMembers().get(0);
         Expression expr2 = expression.getMembers().get(1);
-        if((expr1.getTrackedValue() == null && expr1.getClassReference() == null) 
-        || (expr2.getTrackedValue() == null && expr2.getClassReference() == null)
-        || (expr1.getType() == null || expr2.getType() == null)){
+        if ((expr1.getTrackedValue() == null && expr1.getClassReference() == null)
+                || (expr2.getTrackedValue() == null && expr2.getClassReference() == null)
+                || (expr1.getType() == null || expr2.getType() == null)) {
             expression.setTrackedValue(null);
             return;
         }
 
         //Have to check if any of the expressions is an attribute access
-        if(expr1.getClassReference() != null && expr1.getSelectedAttribute() != null &&
-        !expr1.getClassReference().getAttributes().isEmpty() && 
-        expr1.getClassReference().getAttributes().get(expr1.getSelectedAttribute()) != null){
+        if (expr1.getClassReference() != null && expr1.getSelectedAttribute() != null &&
+                !expr1.getClassReference().getAttributes().isEmpty() &&
+                expr1.getClassReference().getAttributes().get(expr1.getSelectedAttribute()) != null) {
             expr1 = expr1.getClassReference().getAttributes().get(expr1.getSelectedAttribute());
         }
 
-        if(expr2.getClassReference() != null && expr2.getSelectedAttribute() != null &&
-        !expr2.getClassReference().getAttributes().isEmpty() && 
-        expr2.getClassReference().getAttributes().get(expr2.getSelectedAttribute()) != null){
+        if (expr2.getClassReference() != null && expr2.getSelectedAttribute() != null &&
+                !expr2.getClassReference().getAttributes().isEmpty() &&
+                expr2.getClassReference().getAttributes().get(expr2.getSelectedAttribute()) != null) {
             expr2 = expr2.getClassReference().getAttributes().get(expr2.getSelectedAttribute());
         }
         //Test new expressions once again to avoid errors due to null
-        if(expr1.getTrackedValue() == null || expr2.getTrackedValue() == null || expr1.getType() == null
-        || expr2.getType() == null){
+        if (expr1.getTrackedValue() == null || expr2.getTrackedValue() == null || expr1.getType() == null
+                || expr2.getType() == null) {
             expression.setTrackedValue(null);
             return;
         }
 
         boolean areNumbers = (expr1.getType().equals("int") ||
-        expr1.getType().equals("double") || expr1.getType().equals("char")) && 
-        (expr2.getType().equals("int") || expr2.getType().equals("double") ||
-        expr2.getType().equals("char"));
+                expr1.getType().equals("double") || expr1.getType().equals("char")) &&
+                (expr2.getType().equals("int") || expr2.getType().equals("double") ||
+                        expr2.getType().equals("char"));
 
-        if(areNumbers){
+        if (areNumbers) {
             value = expr1.getType().equals("char") ? expr1.getTrackedValue().toCharArray()[1]
-            : Double.parseDouble(expr1.getTrackedValue());
+                    : Double.parseDouble(expr1.getTrackedValue());
             anotherValue = expr2.getType().equals("char") ? expr2.getTrackedValue()
-            .toCharArray()[1] : Double.parseDouble(expr2.getTrackedValue());
+                    .toCharArray()[1] : Double.parseDouble(expr2.getTrackedValue());
         }
-        switch(expression.getOperator()){
+        switch (expression.getOperator()) {
             case ">":
                 result = value > anotherValue;
                 expression.setTrackedValue(result.toString());
@@ -1208,11 +1199,11 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                 expression.setType("double");
                 return;
             case "+":
-                if(areNumbers){
+                if (areNumbers) {
                     result = value + anotherValue;
                     expression.setTrackedValue(result.toString());
-                    expression.setType("double"); 
-                } else if(expr1.getType().equals("String") || expr2.getType().equals("String")){
+                    expression.setType("double");
+                } else if (expr1.getType().equals("String") || expr2.getType().equals("String")) {
                     result = expr1.getTrackedValue() + expr2.getTrackedValue();
                     expression.setTrackedValue(result.toString());
                     expression.setType("String");
@@ -1224,37 +1215,37 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                 expression.setType("double");
                 return;
             case "==":
-                if(areNumbers){
+                if (areNumbers) {
                     result = Math.abs(value - anotherValue) < epsilon;
                     expression.setTrackedValue(result.toString());
                     expression.setType("boolean");
-                } else if(expr1.getType().equals("boolean") && expr2.getType().equals("boolean")){
+                } else if (expr1.getType().equals("boolean") && expr2.getType().equals("boolean")) {
                     result = Boolean.valueOf(expr1.getTrackedValue()) == Boolean.valueOf(expr2.getTrackedValue());
                     expression.setTrackedValue(result.toString());
                     expression.setType("boolean");
-                } else if(expr1.getType().equals("String") && expr2.getType().equals("String")){
+                } else if (expr1.getType().equals("String") && expr2.getType().equals("String")) {
                     result = expr1.getTrackedValue().equals(expr2.getTrackedValue());
                     expression.setTrackedValue(result.toString());
                     expression.setType("boolean");
                 }
                 return;
             case "!=":
-                if(areNumbers){
+                if (areNumbers) {
                     result = Math.abs(value - anotherValue) >= epsilon;
                     expression.setTrackedValue(result.toString());
                     expression.setType("boolean");
-                } else if(expr1.getType().equals("boolean") && expr2.getType().equals("boolean")){
+                } else if (expr1.getType().equals("boolean") && expr2.getType().equals("boolean")) {
                     result = Boolean.valueOf(expr1.getTrackedValue()) != Boolean.valueOf(expr2.getTrackedValue());
                     expression.setTrackedValue(result.toString());
                     expression.setType("boolean");
-                } else if(expr1.getType().equals("String") && expr2.getType().equals("String")){
+                } else if (expr1.getType().equals("String") && expr2.getType().equals("String")) {
                     result = !expr1.getTrackedValue().equals(expr2.getTrackedValue());
                     expression.setTrackedValue(result.toString());
                     expression.setType("boolean");
                 }
                 return;
             default:
-            System.out.println("Unknown operator: " + expression.getOperator());
+                System.out.println("Unknown operator: " + expression.getOperator());
         }
     }
 
@@ -1263,14 +1254,14 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
      * Adds the current found return value (normal value, an object - class reference or null)
      * of a function to the corresponding functionCall.
      */
-    public void trackReturnValueFromFunction(Function function, FunctionCall functionCall){
-        if(function.getCodeBlock().getReturnTrackedValue() != null){
+    public void trackReturnValueFromFunction(Function function, FunctionCall functionCall) {
+        if (function.getCodeBlock().getReturnTrackedValue() != null) {
             functionCall.setTrackedValue(function.getCodeBlock().getReturnTrackedValue());
             functionCall.setType(function.getCodeBlock().getReturnType());
-        } else if(function.getCodeBlock().getReturnClassReference() != null){
+        } else if (function.getCodeBlock().getReturnClassReference() != null) {
             functionCall.setClassReference(function.getCodeBlock().getReturnClassReference());
             functionCall.setType(function.getCodeBlock().getReturnType());
-        } else{
+        } else {
             functionCall.setTrackedValue(null);
             functionCall.setClassReference(null);
         }
@@ -1281,15 +1272,15 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
      * Adds the current found return value (normal value, an object - class reference or null),
      * previously added to a function call, to the corresponding methodCall (if applicable).
      */
-    public void trackReturnValueForMethodCall(MethodCallExpression methodCall){
-        if(methodCall.getMembers().size() == 1 && methodCall.getMembers().get(0) instanceof FunctionCall functionCall){
-            if(functionCall.getTrackedValue() != null){
+    public void trackReturnValueForMethodCall(MethodCallExpression methodCall) {
+        if (methodCall.getMembers().size() == 1 && methodCall.getMembers().getFirst() instanceof FunctionCall functionCall) {
+            if (functionCall.getTrackedValue() != null) {
                 methodCall.setType(functionCall.getType());
                 methodCall.setTrackedValue(functionCall.getTrackedValue());
-            } else if(functionCall.getClassReference() != null){
+            } else if (functionCall.getClassReference() != null) {
                 methodCall.setType(functionCall.getType());
                 methodCall.setClassReference(functionCall.getClassReference());
-            } else{
+            } else {
                 methodCall.setType(null);
                 methodCall.setTrackedValue(null);
                 methodCall.setClassReference(null);
@@ -1298,15 +1289,15 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     }
 
     /**
-     * @function createNewVariableForAttributes
      * @return Variable
-     * 
+     * <p>
      * Receives a variable and returns another reference to that variable with the same
      * information regarding name, type, if it's tainted or not, etc. Used mainly because
      * of class instances to know what attribute was used for that instance in a given statement,
      * without having that information be overwritten to all other references of that variable
+     * @function createNewVariableForAttributes
      */
-    public Variable createNewVariableForAttributes(Variable variable){
+    public Variable createNewVariableForAttributes(Variable variable) {
         Variable var = new Variable(variable.getName());
         var.setClassReference(variable.getClassReference());
         var.setTrackedValue(variable.getTrackedValue());
@@ -1318,16 +1309,16 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     }
 
     /**
-      * @function createNewAttributeReference
-      * @param attribute
-      * @return Attribute
-      *
-      * Represents the creation of a new reference for the @param attribute.
-      * The goal here is to create a new reference for a given attribute (whenever 
-      * a new class instance is created) so that it is not the same as the one stored 
-      * in the classes field of GastBuilder.
-      */
-      public Attribute createNewAttributeReference(Attribute attribute){
+     * @param attribute
+     * @return Attribute
+     * <p>
+     * Represents the creation of a new reference for the @param attribute.
+     * The goal here is to create a new reference for a given attribute (whenever
+     * a new class instance is created) so that it is not the same as the one stored
+     * in the classes field of GastBuilder.
+     * @function createNewAttributeReference
+     */
+    public Attribute createNewAttributeReference(Attribute attribute) {
         Attribute newAttribute = new Attribute();
         newAttribute.setName(attribute.getName());
         newAttribute.setType(attribute.getType());
@@ -1338,56 +1329,56 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         newAttribute.setClassReference(attribute.getClassReference());
         newAttribute.setLambdaFunc(attribute.getLambdaFunc());
         return newAttribute;
-     }
+    }
 
     /**
-     * @function tryToGetConstructor
      * @param constructorCall
      * @return FileAndFunction
-     * 
+     * <p>
      * Receives a constructor call and analyses all the constructors its class might have.
      * It is done by analysing the parameters' type between the constructor and the invocation,
      * which might be a simplified way of achieving this. Will return null if using an "empty" constructor.
-     * */
-    public FileAndFunction tryToGetConstructor(FunctionCall constructorCall){
+     * @function tryToGetConstructor
+     */
+    public FileAndFunction tryToGetConstructor(FunctionCall constructorCall) {
         int equalParameters;
-        boolean foundConstructor;         
-        for(File file : files){
-            if(file.getClasses().containsKey(constructorCall.getFunctionName())){
+        boolean foundConstructor;
+        for (File file : files) {
+            if (file.getClasses().containsKey(constructorCall.getFunctionName())) {
                 Class clazz = file.getClasses().get(constructorCall.getFunctionName());
 
-                if(clazz.getConstructors().size() == 1){
+                if (clazz.getConstructors().size() == 1) {
                     return new FileAndFunction(file,
-                    clazz.getConstructors().get(0), clazz);
-                } else if(clazz.getConstructors().size() > 1){
-                    for(Function constr : clazz.getConstructors()){
+                            clazz.getConstructors().getFirst(), clazz);
+                } else if (clazz.getConstructors().size() > 1) {
+                    for (Function constr : clazz.getConstructors()) {
                         foundConstructor = true;
                         equalParameters = 0;
 
-                        if(constr.getName().equals(constructorCall.getFunctionName()) && 
-                        constr.getParameters().size() == constructorCall.getMembers().size()){
-                            for(int i = 0; i < constr.getParameters().size(); i++){
+                        if (constr.getName().equals(constructorCall.getFunctionName()) &&
+                                constr.getParameters().size() == constructorCall.getMembers().size()) {
+                            for (int i = 0; i < constr.getParameters().size(); i++) {
                                 String paramType = constr.getParameters().getElement(i).getType();
                                 String constrParamType = constructorCall.getMembers().get(i).getType();
-                                if(!paramType.equals(constrParamType)){
+                                if (!paramType.equals(constrParamType)) {
                                     foundConstructor = false;
                                     break;
-                                } else if(constr.getParameters().size() == this.functions.peek().getParameters().size() 
-                                && constr.getName().equals(this.functions.peek().getName()) && 
-                                constr.getParameters().getElement(i).getName().equals(
-                                    this.functions.peek().getParameters().getElement(i).getName())){
+                                } else if (constr.getParameters().size() == this.functions.peek().getParameters().size()
+                                        && constr.getName().equals(this.functions.peek().getName()) &&
+                                        constr.getParameters().getElement(i).getName().equals(
+                                                this.functions.peek().getParameters().getElement(i).getName())) {
                                     //To avoid getting the same constructor, if it is analyzing one right now (recursion)
                                     equalParameters++;
                                 }
                             }
-        
-                            if(foundConstructor && equalParameters < constr.getParameters().size()){
+
+                            if (foundConstructor && equalParameters < constr.getParameters().size()) {
                                 return new FileAndFunction(file, constr, clazz);
                             }
                         }
                     }
                     return null;
-                } else{
+                } else {
                     return null;
                 }
             }
@@ -1397,14 +1388,12 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
     }
 
     /**
+     * @param variable Receives a variable that will receive a null value (either it is actually a null or
+     *                 the value it would received couldn't be tracked) and so it is needed to cleanse all other
+     *                 tracking fields.
      * @function cleanVariable
-     * @param variable
-     * 
-     * Receives a variable that will receive a null value (either it is actually a null or 
-     * the value it would received couldn't be tracked) and so it is needed to cleanse all other
-     * tracking fields.
      */
-    public void cleanVariable(Variable variable){ 
+    public void cleanVariable(Variable variable) {
         variable.setClassReference(null);
         variable.setSelectedAttribute(null);
         variable.setTrackedValue(null);
@@ -1417,17 +1406,17 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
      * Whenever an object should be updated (eg, it has a superclass that was analysed after this
      * object was analysed), then all attributes are searched and given to it.
      */
-    public void updateClassReferenceAttributes(Variable variable){
+    public void updateClassReferenceAttributes(Variable variable) {
         ArrayList<Attribute> attributes;
-        if(!variable.getClassReference().getAttributes().isEmpty()){
+        if (!variable.getClassReference().getAttributes().isEmpty()) {
             attributes = getAllSuperAttributes(variable.getClassReference().getSuperClass());
-        } else{
+        } else {
             attributes = getAllSuperAttributes(variable.getClassReference().getName());
         }
 
-        if(attributes != null && !attributes.isEmpty()){
-            for(Attribute attribute : attributes){
-                if(!variable.getClassReference().getAttributes().containsKey(attribute.getName())){
+        if (attributes != null && !attributes.isEmpty()) {
+            for (Attribute attribute : attributes) {
+                if (!variable.getClassReference().getAttributes().containsKey(attribute.getName())) {
                     variable.getClassReference().getAttributes().put(attribute.getName(), attribute);
                 }
             }
@@ -1436,64 +1425,64 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         }
     }
 
-    /** 
+    /**
      * @function getAllSuperAttributes
      * Retrieves all attributes from a given class and from their superclasses, if any.
      **/
-    public ArrayList<Attribute> getAllSuperAttributes(String superclassName){
+    public ArrayList<Attribute> getAllSuperAttributes(String superclassName) {
         ArrayList<Attribute> attributes = new ArrayList<>();
-        
-        while(true){
-            if(this.analyzedClasses.containsKey(superclassName)){
-                for(Attribute attribute : this.analyzedClasses.get(superclassName).getAttributes().values()){
+
+        while (true) {
+            if (this.analyzedClasses.containsKey(superclassName)) {
+                for (Attribute attribute : this.analyzedClasses.get(superclassName).getAttributes().values()) {
                     Attribute newAttribute = createNewAttributeReference(attribute);
                     attributes.add(newAttribute);
                 }
 
-                if(this.analyzedClasses.get(superclassName).getSuperClass() != null){
+                if (this.analyzedClasses.get(superclassName).getSuperClass() != null) {
                     superclassName = this.analyzedClasses.get(superclassName).getSuperClass();
-                } else{
+                } else {
                     return attributes;
                 }
-            } else{
+            } else {
                 return attributes;
             }
         }
     }
-    
-    /** 
+
+    /**
      * @function resetIfStatementsExploredStatus
      * Resets the explored status of the current if statement (be it an if, else if, else) and
      * checks if its code block also possesses more if statements.
      **/
-    public void resetIfStatementsExploredStatus(IfStatement ifStatement){
-        if(ifStatement.getCodeBlock().isFullyExplored()){
+    public void resetIfStatementsExploredStatus(IfStatement ifStatement) {
+        if (ifStatement.getCodeBlock().isFullyExplored()) {
             ifStatement.getCodeBlock().setFullyExplored(false);
             lookForIfStatementsToReset(ifStatement.getCodeBlock());
         }
 
-        if(ifStatement.getElseIfs() != null && !ifStatement.getElseIfs().isEmpty()){
-            for(IfStatement elseIf : ifStatement.getElseIfs()){
-                if(elseIf.getCodeBlock().isFullyExplored()){
+        if (ifStatement.getElseIfs() != null && !ifStatement.getElseIfs().isEmpty()) {
+            for (IfStatement elseIf : ifStatement.getElseIfs()) {
+                if (elseIf.getCodeBlock().isFullyExplored()) {
                     elseIf.getCodeBlock().setFullyExplored(false);
                     lookForIfStatementsToReset(elseIf.getCodeBlock());
                 }
             }
         }
 
-        if(ifStatement.getElseBlock().isFullyExplored()){
+        if (ifStatement.getElseBlock().isFullyExplored()) {
             ifStatement.getElseBlock().setFullyExplored(false);
             lookForIfStatementsToReset(ifStatement.getElseBlock());
         }
     }
 
-    /** 
+    /**
      * @function lookForIfStatementsToReset
      * Analyses the code block until it finds an if statement to reset the explored status.
      **/
-    public void lookForIfStatementsToReset(CodeBlock codeBlock){
-        for(Statement statement : codeBlock.getStatements()){
-            if(statement instanceof IfStatement){
+    public void lookForIfStatementsToReset(CodeBlock codeBlock) {
+        for (Statement statement : codeBlock.getStatements()) {
+            if (statement instanceof IfStatement) {
                 resetIfStatementsExploredStatus((IfStatement) statement);
             }
         }
@@ -1505,7 +1494,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
      * found in a return statement. This applies primarily to functions that have more than
      * one return (indicative of more than one possible path).
      **/
-    public void saveFirstTaintedReturnValueFound(String trackedValue, Class classReference, String type, String name){
+    public void saveFirstTaintedReturnValueFound(String trackedValue, Class classReference, String type, String name) {
         this.firstTaintedReturnValue = new Variable(name);
         this.firstTaintedReturnValue.setTrackedValue(trackedValue);
         this.firstTaintedReturnValue.setClassReference(classReference);
@@ -1518,18 +1507,18 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
      * Checks if a given variable's type is an untrusted data source. Could be, for
      * example, a buffer reader or any other bad source that can appear in the code.
      */
-    public boolean checkIfUntrustedDataSource(Variable variable){
+    public boolean checkIfUntrustedDataSource(Variable variable) {
         return spec.getUntrustedDataSources() != null && !spec.getUntrustedDataSources().isEmpty() &&
                 variable.getType() != null && spec.getUntrustedDataSources().contains(variable.getType());
     }
 
-    public void canPropagateClassReferenceToFunction(Variable variable, String functionName, 
-    MethodCallExpression methodCall){
-        if(variable.getClassReference() != null){
-            if(variable.getSelectedAttribute() != null &&
-            !variable.getClassReference().getAttributes().isEmpty() &&
-            variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null){
-                if(variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()).getClassReference() == null){
+    public void canPropagateClassReferenceToFunction(Variable variable, String functionName,
+                                                     MethodCallExpression methodCall) {
+        if (variable.getClassReference() != null) {
+            if (variable.getSelectedAttribute() != null &&
+                    !variable.getClassReference().getAttributes().isEmpty() &&
+                    variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()) != null) {
+                if (variable.getClassReference().getAttributes().get(variable.getSelectedAttribute()).getClassReference() == null) {
                     /*this.tempThis = null;
                     //No class reference found. null will be propagated as reference for corresponding function
                     this.noClassReferencePropagation = true;
@@ -1538,7 +1527,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                     //No class reference found. null will be propagated as reference for corresponding function
                     this.noClassReferencePropagation.add(true);
                     this.methodCallReferencePropagation.add(functionName);
-                } else{
+                } else {
                     /*this.tempThis = variable.getClassReference().getAttributes().get(variable.getSelectedAttribute());
                     //Class reference found & will be propagated as reference for corresponding function
                     this.noClassReferencePropagation = false;
@@ -1548,7 +1537,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                     this.noClassReferencePropagation.add(false);
                     this.methodCallReferencePropagation.add(functionName);
                 }
-            } else{
+            } else {
                 /*this.tempThis = variable;
                 //Class reference found & will be propagated as reference for corresponding function
                 this.noClassReferencePropagation = false;
@@ -1558,7 +1547,7 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
                 this.noClassReferencePropagation.add(false);
                 this.methodCallReferencePropagation.add(functionName);
             }
-        } else{
+        } else {
             /*this.tempThis = null;
             //No class reference found. null will be propagated as reference for corresponding function
             this.noClassReferencePropagation = true;
@@ -1567,9 +1556,9 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
             //No class reference found. null will be propagated as reference for corresponding function
             this.noClassReferencePropagation.add(true);
             this.methodCallReferencePropagation.add(functionName);
-            if(variable.getName().equals("this") && variable.getSelectedAttribute() != null){
-                if(!classes.isEmpty() && 
-                classes.peek().getAttributes().containsKey(variable.getSelectedAttribute())){
+            if (variable.getName().equals("this") && variable.getSelectedAttribute() != null) {
+                if (!classes.isEmpty() &&
+                        classes.peek().getAttributes().containsKey(variable.getSelectedAttribute())) {
                     //Avoid recursion of same name functions (eg call List isEmpty() inside a method isEmpty())
                     methodCall.setCurrentType(classes.peek().getAttributes().get(variable.getSelectedAttribute()).getType());
                 }
@@ -1577,39 +1566,39 @@ public class TaintVisitor implements AstBuilderVisitorInterface, ValueTrackingIn
         }
     }
 
-    public void resetFunctionVariablesTaintedness(Function function){
+    public void resetFunctionVariablesTaintedness(Function function) {
         if (spec.isRootSpecification()) {
-            for(Variable variable : file.getRootFunc().getVariables().values()){
+            for (Variable variable : file.getRootFunc().getVariables().values()) {
                 variable.setTainted(spec.getTaintedVarsOrArgs().contains(variable.getName()));
             }
-            if(!file.getRootFunc().getParameters().isEmpty()){
+            if (!file.getRootFunc().getParameters().isEmpty()) {
                 spec.getTaintedVarsOrArgs().forEach(var -> file.getRootFunc().getParameters().get(var).setTainted(true));
             }
             return;
         }
-        
-        if(spec.getFunction().getName().equals(function.getName()) && spec.getFileName().equals(this.file.getName())){
+
+        if (spec.getFunction().getName().equals(function.getName()) && spec.getFileName().equals(this.file.getName())) {
             taintFunctionOrMethod(spec, function);
         }
 
-        for(Variable variable : function.getVariables().values()){
+        for (Variable variable : function.getVariables().values()) {
             variable.setTainted(false);
         }
     }
 
     // Not used currently. Could be handy in the future
-    public boolean getSuperclassTypeHierarchy(String classType, String matchingType){
-        if(classType.matches(matchingType)){
+    public boolean getSuperclassTypeHierarchy(String classType, String matchingType) {
+        if (classType.matches(matchingType)) {
             return true;
-        } else{
-            for(File file : files){
-                if(file.getClasses().containsKey(classType)){
-                    if(file.getClasses().get(classType).getSuperClass() != null){
+        } else {
+            for (File file : files) {
+                if (file.getClasses().containsKey(classType)) {
+                    if (file.getClasses().get(classType).getSuperClass() != null) {
                         classType = file.getClasses().get(classType).getSuperClass();
-                        if(classType.matches(matchingType)){
+                        if (classType.matches(matchingType)) {
                             return true;
                         }
-                    } else{
+                    } else {
                         return false;
                     }
                 }
