@@ -8,6 +8,7 @@ import ist.gt.model.Expression;
 import ist.gt.util.Util;
 
 import java.util.Arrays;
+
 import lombok.Data;
 
 @Data
@@ -22,7 +23,7 @@ public class JsFileListener extends JavaScriptParserBaseListener {
     //These 2 are mainly used for pre/post increment-decrement assignment expressions
     private boolean wasAssignmentFound = false;
     private boolean genericStatementInserted = false;
-    /* This is used for normal pre/post increment-decrement expressions where 
+    /* This is used for normal pre/post increment-decrement expressions where
      * GenericStatement is parsed by the Parser (and not inserted by the tool) */
     private boolean genericStatementParsed = false;
     private boolean constructorFound = false;
@@ -33,28 +34,28 @@ public class JsFileListener extends JavaScriptParserBaseListener {
     public JsFileListener(String filename) {
         gastBuilder = new GastBuilder(filename);
     }
- 
+
     @Override
     public void enterLiteral(JavaScriptParser.LiteralContext ctx) {
-        if(ctx.BooleanLiteral() != null){
+        if (ctx.BooleanLiteral() != null) {
             gastBuilder.addConstant(ctx, ctx.getText(), "boolean");
-        } else if(ctx.StringLiteral() != null){
+        } else if (ctx.StringLiteral() != null) {
             //Remove quotes from ctx text due to the appearance of double quotes later on
-            String rmvQuotes = ctx.getText().substring(1, ctx.getText().length()-1).replace("\"\"", "\"");
+            String rmvQuotes = ctx.getText().substring(1, ctx.getText().length() - 1).replace("\"\"", "\"");
             gastBuilder.addConstant(ctx, rmvQuotes, "String");
-        } else if(ctx.NullLiteral() != null){
+        } else if (ctx.NullLiteral() != null) {
             gastBuilder.addConstant(ctx, ctx.getText(), "null");
-        } else if (ctx.numericLiteral() != null){
-            if(negativeNumberFound){
+        } else if (ctx.numericLiteral() != null) {
+            if (negativeNumberFound) {
                 gastBuilder.addConstant(ctx, "-" + ctx.getText(), "double");
                 negativeNumberFound = false;
-            } else{
+            } else {
                 gastBuilder.addConstant(ctx, ctx.getText(), "double");
             }
-        } else if(ctx.TemplateStringLiteral() != null || ctx.RegularExpressionLiteral() != null){
-            String rmvQuotes = ctx.getText().substring(1, ctx.getText().length()-1).replace("\"\"", "\"");
+        } else if (ctx.TemplateStringLiteral() != null || ctx.RegularExpressionLiteral() != null) {
+            String rmvQuotes = ctx.getText().substring(1, ctx.getText().length() - 1).replace("\"\"", "\"");
             gastBuilder.addConstant(ctx, rmvQuotes, "String");
-        } 
+        }
     }
 
     @Override
@@ -70,7 +71,7 @@ public class JsFileListener extends JavaScriptParserBaseListener {
     @Override
     public void enterMethodDefinition(JavaScriptParser.MethodDefinitionContext ctx) {
         gastBuilder.addFunction(ctx, ctx.propertyName().getText());
-        if(ctx.propertyName().getText().equals("constructor")){
+        if (ctx.propertyName().getText().equals("constructor")) {
             constructorFound = true;
         }
     }
@@ -78,96 +79,96 @@ public class JsFileListener extends JavaScriptParserBaseListener {
     @Override
     public void exitMethodDefinition(JavaScriptParser.MethodDefinitionContext ctx) {
         gastBuilder.exitFunctionOrMethodDeclaration();
-        if(constructorFound){
+        if (constructorFound) {
             constructorFound = false;
         }
     }
-    
+
     @Override
     public void enterGenericExpression(JavaScriptParser.GenericExpressionContext ctx) {
         /* To avoid adding an Expression to another existing Expression (has unnecessary cases)*/
-        if(!(gastBuilder.getStatements().peek() instanceof Expression)){
+        if (!(gastBuilder.getStatements().peek() instanceof Expression)) {
             gastBuilder.addExpression(ctx);
             insertedExpression = true;
         }
-        
-        if(ctx.Plus() != null){
+
+        if (ctx.Plus() != null) {
             gastBuilder.addExpressionOperator(ctx.Plus().getText());
-        } else if(ctx.Minus() != null){
-            if(ctx.singleExpression().size() == 1){
+        } else if (ctx.Minus() != null) {
+            if (ctx.singleExpression().size() == 1) {
                 negativeNumberFound = true;
-            } else{
+            } else {
                 gastBuilder.addExpressionOperator(ctx.Minus().getText());
             }
-        } else if(ctx.Multiply() != null){
+        } else if (ctx.Multiply() != null) {
             gastBuilder.addExpressionOperator(ctx.Multiply().getText());
-        } else if(ctx.Divide() != null){
+        } else if (ctx.Divide() != null) {
             gastBuilder.addExpressionOperator(ctx.Divide().getText());
-        } else if(ctx.Modulus() != null){
+        } else if (ctx.Modulus() != null) {
             gastBuilder.addExpressionOperator(ctx.Modulus().getText());
-        } else if(ctx.LessThan() != null){
+        } else if (ctx.LessThan() != null) {
             gastBuilder.addExpressionOperator(ctx.LessThan().getText());
-        } else if(ctx.MoreThan() != null){
+        } else if (ctx.MoreThan() != null) {
             gastBuilder.addExpressionOperator(ctx.MoreThan().getText());
-        } else if(ctx.LessThanEquals() != null){
+        } else if (ctx.LessThanEquals() != null) {
             gastBuilder.addExpressionOperator(ctx.LessThanEquals().getText());
-        } else if(ctx.GreaterThanEquals() != null){
+        } else if (ctx.GreaterThanEquals() != null) {
             gastBuilder.addExpressionOperator(ctx.GreaterThanEquals().getText());
-        } else if(ctx.Equals_() != null){
+        } else if (ctx.Equals_() != null) {
             gastBuilder.addExpressionOperator(ctx.Equals_().getText());
-        } else if(ctx.NotEquals() != null){
+        } else if (ctx.NotEquals() != null) {
             gastBuilder.addExpressionOperator(ctx.NotEquals().getText());
         }
     }
 
     @Override
     public void exitGenericExpression(JavaScriptParser.GenericExpressionContext ctx) {
-        if(ctx.PlusPlus() != null){
-            /* GenericStatemet is called for x++/x--/++x/--x but not for, e.g,  y = x++, 
+        if (ctx.PlusPlus() != null) {
+            /* GenericStatemet is called for x++/x--/++x/--x but not for, e.g,  y = x++,
              * so it's important to add it in that last case as well */
-            if(!genericStatementParsed){
+            if (!genericStatementParsed) {
                 gastBuilder.createGenStatementForIncDecExpression(ctx);
                 genericStatementInserted = true;
             }
 
-            if(ctx.getText().matches("\\+\\+[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+")){
-                if(wasAssignmentFound){
+            if (ctx.getText().matches("\\+\\+[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+")) {
+                if (wasAssignmentFound) {
                     gastBuilder.assignmentIncrementDecrementExpression(ctx, "+", "pre");
                 } else {
                     gastBuilder.switchGenStatementForIncDecExpression(false);
                     gastBuilder.normalIncrementDecrementExpression(ctx, "+", "pre");
                     gastBuilder.switchGenStatementForIncDecExpression(true);
                 }
-            } else if(ctx.getText().matches("[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+\\+\\+")){
-                if(wasAssignmentFound){
+            } else if (ctx.getText().matches("[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+\\+\\+")) {
+                if (wasAssignmentFound) {
                     gastBuilder.assignmentIncrementDecrementExpression(ctx, "+", "post");
-                } else{
+                } else {
                     gastBuilder.switchGenStatementForIncDecExpression(false);
                     gastBuilder.normalIncrementDecrementExpression(ctx, "+", "post");
                     gastBuilder.switchGenStatementForIncDecExpression(true);
                 }
             }
 
-        } else if(ctx.MinusMinus() != null){
-            /* GenericStatemet is called for x++/x--/++x/--x but not for, e.g,  y = x++, 
+        } else if (ctx.MinusMinus() != null) {
+            /* GenericStatemet is called for x++/x--/++x/--x but not for, e.g,  y = x++,
              * so it's important to add it in that last case as well */
-            if(!genericStatementParsed){
+            if (!genericStatementParsed) {
                 gastBuilder.createGenStatementForIncDecExpression(ctx);
                 genericStatementInserted = true;
             }
 
-            if(ctx.getText().matches("--[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+")){
-                if(wasAssignmentFound){
+            if (ctx.getText().matches("--[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+")) {
+                if (wasAssignmentFound) {
                     gastBuilder.assignmentIncrementDecrementExpression(ctx, "-", "pre");
-                } else{
+                } else {
                     gastBuilder.switchGenStatementForIncDecExpression(false);
                     gastBuilder.normalIncrementDecrementExpression(ctx, "-", "pre");
                     gastBuilder.switchGenStatementForIncDecExpression(true);
                 }
-            } else if(ctx.getText().matches("[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+--")){
-                if(wasAssignmentFound){
+            } else if (ctx.getText().matches("[a-zA-Z0-9_]+?\\.?[a-zA-Z0-9_]+--")) {
+                if (wasAssignmentFound) {
                     gastBuilder.assignmentIncrementDecrementExpression(ctx, "-", "post");
-                }  else{
+                } else {
                     gastBuilder.switchGenStatementForIncDecExpression(false);
                     gastBuilder.normalIncrementDecrementExpression(ctx, "-", "post");
                     gastBuilder.switchGenStatementForIncDecExpression(true);
@@ -175,13 +176,13 @@ public class JsFileListener extends JavaScriptParserBaseListener {
             }
         }
 
-        if(insertedExpression){
+        if (insertedExpression) {
             gastBuilder.trackExpressionValue();
             gastBuilder.exitStatementOrExpression();
             insertedExpression = false;
         }
     }
- 
+
     @Override
     public void enterClassDeclaration(JavaScriptParser.ClassDeclarationContext ctx) {
         gastBuilder.addClass(ctx, Util.getPropSafe(() -> ctx.identifier().getText()), Util.getPropSafe(() -> ctx.classTail().singleExpression().getText()));
@@ -195,29 +196,28 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void enterIdentifierExpression(JavaScriptParser.IdentifierExpressionContext ctx) {
-        if(!variableAttributeAccess){
-            if(!gastBuilder.getStatements().isEmpty() && gastBuilder.getStatements().peek() instanceof Assignment){
+        if (!variableAttributeAccess) {
+            if (!gastBuilder.getStatements().isEmpty() && gastBuilder.getStatements().peek() instanceof Assignment) {
                 Assignment assignment = (Assignment) gastBuilder.getStatements().pop();
-                if(assignment.getLeft() == null){
+                if (assignment.getLeft() == null) {
                     gastBuilder.getStatements().push(assignment);
                     gastBuilder.addVariable(ctx, ctx.identifier().getText());
                     //Add Expression on right side
                     gastBuilder.addExpression(ctx);
                     this.assignmentExpression = true;
-                }
-                else if(assignment.getRight() != null){
+                } else if (assignment.getRight() != null) {
                     gastBuilder.getStatements().push(assignment);
                     gastBuilder.addVariable(ctx, ctx.identifier().getText());
-                } else{
+                } else {
                     gastBuilder.getStatements().push(assignment);
                     gastBuilder.addExpression(ctx);
                     this.assignmentExpression = true;
                     gastBuilder.addVariable(ctx, ctx.identifier().getText());
                 }
-            } else{
+            } else {
                 gastBuilder.addVariable(ctx, ctx.identifier().getText());
             }
-        } else if(ctx.identifier().getText().equals(variableAccessName)){
+        } else if (ctx.identifier().getText().equals(variableAccessName)) {
             variableAccessName = "";
             variableAttributeAccess = false;
         }
@@ -231,21 +231,21 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void exitAssignmentExpression(JavaScriptParser.AssignmentExpressionContext ctx) {
-        if(!gastBuilder.getStatements().isEmpty()){
-            if(this.assignmentExpression){
+        if (!gastBuilder.getStatements().isEmpty()) {
+            if (this.assignmentExpression) {
                 gastBuilder.trackExpressionValue();
                 gastBuilder.exitStatementOrExpression();
                 this.assignmentExpression = false;
             }
-        
+
             gastBuilder.checkIfLeftSideIsExpr();
             gastBuilder.trackLeftVariableValue();
             //Used in situations where assignment has +=, -=, *=, /=, %=
             gastBuilder.modifyAssignmentWithOperator();
-        
+
             gastBuilder.exitStatementOrExpression();
             //Remove inserted GenericStatement from Stack
-            if(wasAssignmentFound && genericStatementInserted){
+            if (wasAssignmentFound && genericStatementInserted) {
                 gastBuilder.exitStatementOrExpression();
                 genericStatementInserted = false;
             }
@@ -255,29 +255,28 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void enterAssignable(JavaScriptParser.AssignableContext ctx) {
-        if(!variableAttributeAccess){
-            if(!gastBuilder.getStatements().isEmpty() && gastBuilder.getStatements().peek() instanceof Assignment){
+        if (!variableAttributeAccess) {
+            if (!gastBuilder.getStatements().isEmpty() && gastBuilder.getStatements().peek() instanceof Assignment) {
                 Assignment assignment = (Assignment) gastBuilder.getStatements().pop();
-                if(assignment.getLeft() == null){
+                if (assignment.getLeft() == null) {
                     gastBuilder.getStatements().push(assignment);
                     gastBuilder.addVariable(ctx, ctx.identifier().getText());
                     //Add Expression on right side
                     gastBuilder.addExpression(ctx);
                     this.assignmentExpression = true;
-                }
-                else if(assignment.getRight() != null){
+                } else if (assignment.getRight() != null) {
                     gastBuilder.getStatements().push(assignment);
                     gastBuilder.addVariable(ctx, ctx.identifier().getText());
-                } else{
+                } else {
                     gastBuilder.getStatements().push(assignment);
                     gastBuilder.addExpression(ctx);
                     this.assignmentExpression = true;
                     gastBuilder.addVariable(ctx, ctx.identifier().getText());
                 }
-            } else{
+            } else {
                 gastBuilder.addVariable(ctx, ctx.identifier().getText());
             }
-        } else if(ctx.identifier().getText().equals(variableAccessName)){
+        } else if (ctx.identifier().getText().equals(variableAccessName)) {
             variableAccessName = "";
             variableAttributeAccess = false;
         }
@@ -291,8 +290,8 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void exitVariableDeclaration(JavaScriptParser.VariableDeclarationContext ctx) {
-        if(!gastBuilder.getStatements().isEmpty()){
-            if(this.assignmentExpression){
+        if (!gastBuilder.getStatements().isEmpty()) {
+            if (this.assignmentExpression) {
                 gastBuilder.trackExpressionValue();
                 gastBuilder.exitStatementOrExpression();
                 this.assignmentExpression = false;
@@ -303,7 +302,7 @@ public class JsFileListener extends JavaScriptParserBaseListener {
             gastBuilder.modifyAssignmentWithOperator();
             gastBuilder.exitStatementOrExpression();
             //Remove inserted GenericStatement from Stack
-            if(wasAssignmentFound && genericStatementInserted){
+            if (wasAssignmentFound && genericStatementInserted) {
                 gastBuilder.exitStatementOrExpression();
                 genericStatementInserted = false;
             }
@@ -313,7 +312,7 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void enterFormalParameterArg(JavaScriptParser.FormalParameterArgContext ctx) {
-        if(!lambdaFunctionDetected){
+        if (!lambdaFunctionDetected) {
             gastBuilder.addParameter(ctx, ctx.assignable().getText());
         }
     }
@@ -335,7 +334,7 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void exitArgument(JavaScriptParser.ArgumentContext ctx) {
-        if(!gastBuilder.getStatements().isEmpty()){
+        if (!gastBuilder.getStatements().isEmpty()) {
             gastBuilder.trackExpressionValue();
             gastBuilder.exitStatementOrExpression();
         }
@@ -373,7 +372,7 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void enterAttributeAccess(JavaScriptParser.AttributeAccessContext ctx) {
-        if(constructorFound){
+        if (constructorFound) {
             gastBuilder.addAttributeToClass(ctx, ctx.identifierName().getText());
             gastBuilder.addClassAttributeToAssignment(ctx.identifierName().getText());
         }
@@ -412,13 +411,13 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     @Override
     public void enterArgumentsExpression(JavaScriptParser.ArgumentsExpressionContext ctx) {
-        if(ctx.Dot() != null){
-            if(!ctx.functionCall().isEmpty()){
+        if (ctx.Dot() != null) {
+            if (!ctx.functionCall().isEmpty()) {
                 gastBuilder.addMethodCall(ctx);
-                gastBuilder.addVariable(ctx,  ctx.singleExpression().getText());
-            } else if(!ctx.attributeAccess().isEmpty()){
-                if(!ctx.singleExpression().getText().equals("this")){
-                    if(!(gastBuilder.getStatements().peek() instanceof Expression)){
+                gastBuilder.addVariable(ctx, ctx.singleExpression().getText());
+            } else if (!ctx.attributeAccess().isEmpty()) {
+                if (!ctx.singleExpression().getText().equals("this")) {
+                    if (!(gastBuilder.getStatements().peek() instanceof Expression)) {
                         gastBuilder.addExpression(ctx);
                         this.attributeAccessExpression = true;
                     }
@@ -427,68 +426,68 @@ public class JsFileListener extends JavaScriptParserBaseListener {
                     variableAttributeAccess = true;
                     variableAccessName = ctx.singleExpression().getText();
                 }
-                
-                if(constructorFound){
+
+                if (constructorFound) {
                     gastBuilder.addAttributeToClass(ctx, ctx.attributeAccess(0).identifierName().getText());
                     gastBuilder.addClassAttributeToAssignment(ctx.attributeAccess(0).identifierName().getText());
-                } else{
+                } else {
                     gastBuilder.accessedAttribute();
                 }
             }
-        } else{
+        } else {
             gastBuilder.addExpression(ctx);
         }
     }
 
     @Override
     public void exitArgumentsExpression(JavaScriptParser.ArgumentsExpressionContext ctx) {
-        if(ctx.Dot() != null){
-            if(!ctx.functionCall().isEmpty()){
+        if (ctx.Dot() != null) {
+            if (!ctx.functionCall().isEmpty()) {
                 gastBuilder.exitStatementOrExpression();
-            } else if(!ctx.attributeAccess().isEmpty()){
-                if(!ctx.singleExpression().getText().equals("this")){
-                    if(this.attributeAccessExpression){
+            } else if (!ctx.attributeAccess().isEmpty()) {
+                if (!ctx.singleExpression().getText().equals("this")) {
+                    if (this.attributeAccessExpression) {
                         gastBuilder.exitStatementOrExpression();
                         this.attributeAccessExpression = false;
                     }
                 }
             }
-        } else{
+        } else {
             gastBuilder.exitStatementOrExpression();
         }
     }
 
     /**
      * @function exitAssignmentOperator
-     * 
+     *
      * Checks the operator associated with the current Assignment being analyzed.
      * The operators supported are: +=, -=, *=, /=, %= and =.
      */
     @Override
-    public void exitAssignmentOperator(JavaScriptParser.AssignmentOperatorContext ctx){
-        if (ctx.PlusAssign() != null){
+    public void exitAssignmentOperator(JavaScriptParser.AssignmentOperatorContext ctx) {
+        if (ctx.PlusAssign() != null) {
             gastBuilder.addAssignmentOperator("+=");
-        } else if(ctx.MinusAssign() != null){
+        } else if (ctx.MinusAssign() != null) {
             gastBuilder.addAssignmentOperator("-=");
-        } else if(ctx.MultiplyAssign() != null){
+        } else if (ctx.MultiplyAssign() != null) {
             gastBuilder.addAssignmentOperator("*=");
-        } else if(ctx.DivideAssign() != null){
+        } else if (ctx.DivideAssign() != null) {
             gastBuilder.addAssignmentOperator("/=");
-        } else if(ctx.ModulusAssign() != null){
+        } else if (ctx.ModulusAssign() != null) {
             gastBuilder.addAssignmentOperator("%=");
         }
     }
 
     /**
      * @function enterArrowFunction
-     * 
+     *
      * Checks if we are dealing with a lambda function. The flag 
      * lambdaFunctionDetected will be used @function enterFormalParameterList.
      */
     @Override
-    public void enterArrowFunction(JavaScriptParser.ArrowFunctionContext ctx){
-        if(ctx.ARROW() != null){
-            if(!(gastBuilder.getStatements().peek() instanceof Expression)){
+    public void enterArrowFunction(JavaScriptParser.ArrowFunctionContext ctx) {
+        if (ctx.ARROW() != null) {
+            if (!(gastBuilder.getStatements().peek() instanceof Expression)) {
                 gastBuilder.addExpression(ctx);
             }
             gastBuilder.addLambdaFunction(ctx);
@@ -498,55 +497,55 @@ public class JsFileListener extends JavaScriptParserBaseListener {
 
     /**
      * @function exitArrowFunction
-     * 
+     *
      * After analyzing the lambda function, the system is returned to its normal
      * state (all flags regarding lambda functions are turned to false).
      */
     @Override
-    public void exitArrowFunction(JavaScriptParser.ArrowFunctionContext ctx){
+    public void exitArrowFunction(JavaScriptParser.ArrowFunctionContext ctx) {
         lambdaFunctionDetected = false;
         gastBuilder.exitLambdaFunction();
-        if(gastBuilder.getStatements().peek() instanceof Expression && !this.assignmentExpression){
+        if (gastBuilder.getStatements().peek() instanceof Expression && !this.assignmentExpression) {
             gastBuilder.exitStatementOrExpression();
         }
     }
 
     /**
      * @function enterFormalParameterList
-     * 
+     *
      * Mainly used for lambda functions. Represents its parameters in a list, so
      * to get them, an iteration through it is needed.
      */
     @Override
-    public void enterFormalParameterList(JavaScriptParser.FormalParameterListContext ctx){
-        if(lambdaFunctionDetected){
-            for(int i = 0; i < ctx.formalParameterArg().size(); i++){
+    public void enterFormalParameterList(JavaScriptParser.FormalParameterListContext ctx) {
+        if (lambdaFunctionDetected) {
+            for (int i = 0; i < ctx.formalParameterArg().size(); i++) {
                 gastBuilder.addParametersToLambdaFunction(ctx, ctx.formalParameterArg(i).getText());
             }
         }
     }
 
     @Override
-    public void enterExpressionStatement(JavaScriptParser.ExpressionStatementContext ctx){
+    public void enterExpressionStatement(JavaScriptParser.ExpressionStatementContext ctx) {
         gastBuilder.addGenericStatement(ctx);
         genericStatementParsed = true;
     }
 
     @Override
-    public void exitExpressionStatement(JavaScriptParser.ExpressionStatementContext ctx){
+    public void exitExpressionStatement(JavaScriptParser.ExpressionStatementContext ctx) {
         gastBuilder.exitStatementOrExpression();
         genericStatementParsed = false;
     }
 
     @Override
-    public void enterNewExpression(JavaScriptParser.NewExpressionContext ctx){
-        String className = Arrays.asList(ctx.singleExpression().getText().split("\\(")).get(0);
+    public void enterNewExpression(JavaScriptParser.NewExpressionContext ctx) {
+        String className = Arrays.asList(ctx.singleExpression().getText().split("\\(")).getFirst();
         gastBuilder.addExpression(ctx);
         gastBuilder.trackClassReference(className);
     }
 
     @Override
-    public void exitNewExpression(JavaScriptParser.NewExpressionContext ctx){
+    public void exitNewExpression(JavaScriptParser.NewExpressionContext ctx) {
         gastBuilder.exitStatementOrExpression();
     }
 }
